@@ -1,21 +1,25 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.idea;
 
-import com.intellij.Patches;
+import com.intellij.accessibility.AccessibilityUtils;
 import com.intellij.concurrency.IdeaForkJoinWorkerThreadFactory;
 import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.LoadingState;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.ide.AssertiveRepaintManager;
+import com.intellij.ide.BootstrapBundle;
 import com.intellij.ide.CliResult;
 import com.intellij.ide.IdeEventQueue;
-import com.intellij.ide.IdeRepaintManager;
 import com.intellij.ide.customize.AbstractCustomizeWizardStep;
+import com.intellij.ide.customize.CommonCustomizeIDEWizardDialog;
 import com.intellij.ide.customize.CustomizeIDEWizardDialog;
 import com.intellij.ide.customize.CustomizeIDEWizardStepsProvider;
+import com.intellij.ide.gdpr.Agreements;
+import com.intellij.ide.gdpr.ConsentOptions;
 import com.intellij.ide.gdpr.EndUserAgreement;
+import com.intellij.ide.instrument.WriteIntentLockInstrumenter;
 import com.intellij.ide.plugins.PluginManagerCore;
-import com.intellij.ide.startup.StartupActionScriptManager;
+import com.intellij.ide.plugins.StartupAbortedException;
 import com.intellij.ide.ui.laf.IntelliJLaf;
 import com.intellij.jna.JnaLoader;
 import com.intellij.openapi.application.ApplicationInfo;
@@ -25,19 +29,15 @@ import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.ShutDownTracker;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.io.win32.IdeaWin32;
-import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.wm.impl.X11UiUtil;
 import com.intellij.ui.AppUIUtil;
 import com.intellij.ui.IconManager;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.EnvironmentUtil;
 import com.intellij.util.PlatformUtils;
-import com.intellij.util.SystemProperties;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.concurrency.NonUrgentExecutor;
 import com.intellij.util.ui.EdtInvocationManager;
@@ -45,6 +45,7 @@ import com.intellij.util.ui.StartupUiUtil;
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Level;
 import org.apache.log4j.PatternLayout;
+import org.apache.log4j.helpers.LogLog;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -54,8 +55,10 @@ import org.jetbrains.io.BuiltInServer;
 import javax.swing.*;
 import java.awt.*;
 import java.io.File;
+import java.io.IOError;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.channels.FileChannel;
@@ -70,25 +73,30 @@ import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 
-import static com.intellij.diagnostic.LoadingState.LAF_INITIALIZED;
 import static java.nio.file.attribute.PosixFilePermission.*;
 
+@ApiStatus.Internal
 public final class StartupUtil {
-  public static final String FORCE_PLUGIN_UPDATES = "idea.force.plugin.updates";
-  public static final String IDEA_CLASS_BEFORE_APPLICATION_PROPERTY = "idea.class.before.app";
+  private static final String IDEA_CLASS_BEFORE_APPLICATION_PROPERTY = "idea.class.before.app";
+  // See ApplicationImpl.USE_SEPARATE_WRITE_THREAD
+  private static final String USE_SEPARATE_WRITE_THREAD_PROPERTY = "idea.use.separate.write.thread";
 
-  @SuppressWarnings("SpellCheckingInspection") private static final String MAGIC_MAC_PATH = "/AppTranslocation/";
+  private static final String MAGIC_MAC_PATH = "/AppTranslocation/";
 
+  @SuppressWarnings("FieldAccessedSynchronizedAndUnsynchronized")
   private static SocketLock ourSocketLock;
   private static final AtomicBoolean ourSystemPatched = new AtomicBoolean();
 
   private StartupUtil() { }
 
-  /* called by the app after startup */
+  public static boolean isUsingSeparateWriteThread() {
+    return Boolean.getBoolean(USE_SEPARATE_WRITE_THREAD_PROPERTY);
+  }
+
+  // called by the app after startup
   public static synchronized void addExternalInstanceListener(@Nullable Function<List<String>, Future<CliResult>> processor) {
-    if (ourSocketLock != null) {
-      ourSocketLock.setCommandProcessor(processor);
-    }
+    if (ourSocketLock == null) throw new AssertionError("Not initialized yet");
+    ourSocketLock.setCommandProcessor(processor);
   }
 
   // used externally by TeamCity plugin (as TeamCity cannot use modern API to support old IDE versions)
@@ -98,10 +106,26 @@ public final class StartupUtil {
     return ourSocketLock == null ? null : ourSocketLock.getServer();
   }
 
-  @NotNull
-  public static synchronized CompletableFuture<BuiltInServer> getServerFuture() {
+  public static synchronized @NotNull CompletableFuture<BuiltInServer> getServerFuture() {
     CompletableFuture<BuiltInServer> serverFuture = ourSocketLock == null ? null : ourSocketLock.getServerFuture();
     return serverFuture == null ? CompletableFuture.completedFuture(null) : serverFuture;
+  }
+
+  private static @NotNull Future<@Nullable Object> loadEuaDocument(@NotNull ExecutorService executorService) {
+    if (Main.isHeadless()) {
+      return CompletableFuture.completedFuture(null);
+    }
+
+    return executorService.submit(() -> {
+      if (!ApplicationInfoImpl.getShadowInstance().isVendorJetBrains()) {
+        return null;
+      }
+
+      Activity euaActivity = StartUpMeasurer.startActivity("eua getting");
+      EndUserAgreement.Document result = EndUserAgreement.getLatestDocument();
+      euaActivity.end();
+      return result;
+    });
   }
 
   public interface AppStarter {
@@ -134,14 +158,15 @@ public final class StartupUtil {
         Method invokeMethod = clazz.getDeclaredMethod("invoke");
         invokeMethod.invoke(null);
       }
-      catch (Exception ex) {
-        log.error("Failed pre-app class init for class " + classBeforeAppProperty, ex);
+      catch (Exception e) {
+        log.error("Failed pre-app class init for class " + classBeforeAppProperty, e);
       }
     }
   }
 
-  public static void prepareApp(@NotNull String[] args, @NotNull String mainClass) throws Exception {
+  public static void prepareApp(@NotNull String @NotNull [] args, @NotNull String mainClass) throws Exception {
     LoadingState.setStrictMode();
+    LoadingState.setErrorHandler((message, throwable) -> Logger.getInstance(LoadingState.class).error(message, throwable));
 
     Activity activity = StartUpMeasurer.startMainActivity("ForkJoin CommonPool configuration");
     IdeaForkJoinWorkerThreadFactory.setupForkJoinCommonPool(Main.isHeadless(args));
@@ -149,19 +174,25 @@ public final class StartupUtil {
     activity = activity.endAndStart("main class loading scheduling");
     ExecutorService executorService = AppExecutorUtil.getAppExecutorService();
 
-    Future<Class<AppStarter>> mainStartFuture = executorService.submit(() -> {
+    Future<AppStarter> appStarterFuture = executorService.submit(() -> {
       Activity subActivity = StartUpMeasurer.startActivity("main class loading");
       @SuppressWarnings("unchecked")
       Class<AppStarter> aClass = (Class<AppStarter>)Class.forName(mainClass);
       subActivity.end();
-      return aClass;
+      return aClass.getDeclaredConstructor().newInstance();
     });
 
     activity = activity.endAndStart("log4j configuration");
     configureLog4j();
 
     activity = activity.endAndStart("LaF init scheduling");
-    CompletableFuture<?> initUiTask = scheduleInitUi(args, executorService);
+    // EndUserAgreement.Document type is not specified to avoid class loading
+    Future<Object> euaDocument = loadEuaDocument(executorService);
+    CompletableFuture<?> initUiTask = scheduleInitUi(args, executorService, euaDocument)
+      .exceptionally(e -> {
+        StartupAbortedException.processException(new StartupAbortedException("UI initialization failed", e));
+        return null;
+      });
     activity.end();
 
     if (!checkJdkVersion()) {
@@ -169,91 +200,117 @@ public final class StartupUtil {
     }
 
     activity = StartUpMeasurer.startMainActivity("config path computing");
-    String configPath = PathManager.getConfigPath();
+    Path configPath = canonicalPath(PathManager.getConfigPath());
+    Path systemPath = canonicalPath(PathManager.getSystemPath());
     activity = activity.endAndStart("config path existence check");
 
     // this check must be performed before system directories are locked
-    boolean configImportNeeded = !Main.isHeadless() && !Files.exists(Paths.get(configPath));
+    boolean configImportNeeded = !Main.isHeadless() &&
+                                 (!Files.exists(configPath) ||
+                                  Files.exists(configPath.resolve(ConfigImportHelper.CUSTOM_MARKER_FILE_NAME)));
 
     activity = activity.endAndStart("system dirs checking");
     // note: uses config directory
-    if (!checkSystemDirs()) {
+    if (!checkSystemDirs(configPath, systemPath)) {
       System.exit(Main.DIR_CHECK_FAILED);
     }
     activity = activity.endAndStart("system dirs locking");
-    lockSystemDirs(args);
+    lockSystemDirs(configPath, systemPath, args);
     activity = activity.endAndStart("file logger configuration");
     // log initialization should happen only after locking the system directory
     Logger log = setupLogger();
     activity.end();
 
+    // plugins cannot be loaded at this moment if needed to import configs, because plugins may be added after importing
+    if (!configImportNeeded) {
+      PluginManagerCore.scheduleDescriptorLoading();
+    }
+
     NonUrgentExecutor.getInstance().execute(() -> {
-      ApplicationInfo appInfo = ApplicationInfoImpl.getShadowInstance();
-      Activity subActivity = StartUpMeasurer.startActivity("essential IDE info logging");
-      logEssentialInfoAboutIde(log, appInfo);
-      subActivity.end();
+      setupSystemLibraries();
+      logEssentialInfoAboutIde(log, ApplicationInfoImpl.getShadowInstance());
+      loadSystemLibraries(log);
     });
 
-    Future<?> extraTaskFuture = executorService.submit(StartupUtil::setupSystemLibraries);
-
-    fixProcessEnvironment();
+    Activity subActivity = StartUpMeasurer.startActivity("environment loading");
+    EnvironmentUtil.loadEnvironment(subActivity::end);
 
     if (!configImportNeeded) {
-      installPluginUpdates();
       runPreAppClass(log);
     }
 
-    NonUrgentExecutor.getInstance().execute(() -> loadSystemLibraries(log));
-
-    activity = StartUpMeasurer.startMainActivity("tasks waiting");
-    extraTaskFuture.get();
-
-    activity = activity.endAndStart("main class loading waiting");
-    Class<AppStarter> aClass = mainStartFuture.get();
-    activity.end();
-
-    startApp(args, initUiTask, log, configImportNeeded, aClass.newInstance());
+    startApp(args, initUiTask, log, configImportNeeded, appStarterFuture, euaDocument);
   }
 
-  private static void startApp(@NotNull String[] args,
+  private static @NotNull AppStarter getAppStarter(@NotNull Future<AppStarter> mainStartFuture)
+    throws InterruptedException, ExecutionException {
+    Activity activity = mainStartFuture.isDone() ? null : StartUpMeasurer.startMainActivity("main class loading waiting");
+    AppStarter result = mainStartFuture.get();
+    if (activity != null) {
+      activity.end();
+    }
+    return result;
+  }
+
+  private static void startApp(String @NotNull [] args,
                                @NotNull CompletableFuture<?> initUiTask,
                                @NotNull Logger log,
                                boolean configImportNeeded,
-                               @NotNull AppStarter appStarter) throws Exception {
+                               @NotNull Future<AppStarter> appStarterFuture,
+                               @NotNull Future<@Nullable Object> euaDocument) throws Exception {
     if (!Main.isHeadless()) {
-      Activity activity = StartUpMeasurer.startMainActivity("config importing");
+      Activity activity = StartUpMeasurer.startMainActivity("eua showing");
+      Object document = euaDocument.get();
+      boolean agreementDialogWasShown = document != null && showUserAgreementAndConsentsIfNeeded(log, initUiTask, (EndUserAgreement.Document)document);
 
       if (configImportNeeded) {
+        activity = activity.endAndStart("screen reader checking");
+        runInEdtAndWait(log, AccessibilityUtils::enableScreenReaderSupportIfNecessary, initUiTask);
+      }
+
+      if (configImportNeeded) {
+        activity = activity.endAndStart("config importing");
+        AppStarter appStarter = getAppStarter(appStarterFuture);
         appStarter.beforeImportConfigs();
-        Path newConfigDir = Paths.get(PathManager.getConfigPath());
-        runInEdtAndWait(log, () -> ConfigImportHelper.importConfigsTo(newConfigDir, log), initUiTask);
+        Path newConfigDir = PathManager.getConfigDir();
+        runInEdtAndWait(log, () -> ConfigImportHelper.importConfigsTo(agreementDialogWasShown, newConfigDir, Arrays.asList(args), log), initUiTask);
         appStarter.importFinished(newConfigDir);
+
+        if (!ConfigImportHelper.isConfigImported()) {
+          // exception handler is already set by ConfigImportHelper; event queue and icons already initialized as part of old config import
+          EventQueue.invokeAndWait(() -> {
+            runStartupWizard(appStarter);
+            PluginManagerCore.scheduleDescriptorLoading();
+          });
+        }
+        else {
+          PluginManagerCore.scheduleDescriptorLoading();
+        }
       }
-
-      showUserAgreementAndConsentsIfNeeded(log, initUiTask);
-
-      if (configImportNeeded && !ConfigImportHelper.isConfigImported()) {
-        // exception handler is already set by ConfigImportHelper; event queue and icons already initialized as part of old config import
-        EventQueue.invokeAndWait(() -> runStartupWizard(appStarter));
-      }
-
       activity.end();
     }
 
-    EdtInvocationManager.executeWithCustomManager(new EdtInvocationManager.SwingEdtInvocationManager() {
+    EdtInvocationManager oldEdtInvocationManager = null;
+    EdtInvocationManager.SwingEdtInvocationManager edtInvocationManager = new EdtInvocationManager.SwingEdtInvocationManager() {
       @Override
       public void invokeAndWait(@NotNull Runnable task) {
         runInEdtAndWait(log, task, initUiTask);
       }
-    }, () -> appStarter.start(Arrays.asList(args), initUiTask));
+    };
+    try {
+      oldEdtInvocationManager = EdtInvocationManager.setEdtInvocationManager(edtInvocationManager);
+      getAppStarter(appStarterFuture).start(Arrays.asList(args), initUiTask);
+    }
+    finally {
+      EdtInvocationManager.restoreEdtInvocationManager(edtInvocationManager, oldEdtInvocationManager);
+    }
   }
 
-  @NotNull
-  private static CompletableFuture<?> scheduleInitUi(@NotNull String[] args, @NotNull ExecutorService executor) {
+  private static @NotNull CompletableFuture<?> scheduleInitUi(@NotNull String @NotNull [] args, @NotNull Executor executor, @NotNull Future<@Nullable Object> eulaDocument) {
     // mainly call sun.util.logging.PlatformLogger.getLogger - it takes enormous time (up to 500 ms)
     // Before lockDirsAndConfigureLogger can be executed only tasks that do not require log,
     // because we don't want to complicate logging. It is OK, because lockDirsAndConfigureLogger is not so heavy-weight as UI tasks.
-    CompletableFuture<Void> future = new CompletableFuture<>();
+    CompletableFuture<Void> initUiFuture = new CompletableFuture<>();
     executor.execute(() -> {
       try {
         checkHiDPISettings();
@@ -270,12 +327,12 @@ public final class StartupUtil {
             StartupUiUtil.initDefaultLaF();
           }
           catch (Throwable e) {
-            future.completeExceptionally(e);
+            initUiFuture.completeExceptionally(e);
             return;
           }
 
-          future.complete(null);
-          StartUpMeasurer.setCurrentState(LAF_INITIALIZED);
+          initUiFuture.complete(null);
+          StartUpMeasurer.setCurrentState(LoadingState.LAF_INITIALIZED);
 
           if (Main.isHeadless()) {
             return;
@@ -288,28 +345,58 @@ public final class StartupUtil {
           activity = activity.endAndStart("init JBUIScale");
           JBUIScale.scale(1f);
 
-          Activity prepareSplashActivity = activity.endAndStart("splash preparation");
-          EventQueue.invokeLater(() -> {
-            SplashManager.show(args);
-            prepareSplashActivity.end();
-          });
+          if (!Main.isLightEdit() && !Boolean.getBoolean(CommandLineArgs.NO_SPLASH)) {
+            Activity prepareSplashActivity = activity.endAndStart("splash preparation");
+            EventQueue.invokeLater(() -> {
+              Activity eulaActivity = prepareSplashActivity.startChild("splash eula isAccepted");
+              boolean isEulaAccepted;
+              try {
+                EndUserAgreement.Document document = (EndUserAgreement.Document)eulaDocument.get();
+                isEulaAccepted = document == null || document.isAccepted();
+              }
+              catch (InterruptedException | ExecutionException ignore) {
+                isEulaAccepted = true;
+              }
+              eulaActivity.end();
+
+              SplashManager.show(args, isEulaAccepted);
+              prepareSplashActivity.end();
+            });
+            return;
+          }
 
           // may be expensive (~200 ms), so configure only after showing the splash and as invokeLater (to allow other queued events to be executed)
-          EventQueue.invokeLater(() -> StartupUiUtil.configureHtmlKitStylesheet());
+          EventQueue.invokeLater(StartupUiUtil::configureHtmlKitStylesheet);
         });
       }
       catch (Throwable e) {
-        future.completeExceptionally(e);
+        initUiFuture.completeExceptionally(e);
       }
     });
 
     if (!Main.isHeadless()) {
       // do not wait, approach like AtomicNotNullLazyValue is used under the hood
-      future.thenRunAsync(() -> {
-        updateFrameClassAndWindowIcon();
-      }, executor);
+      initUiFuture.thenRunAsync(StartupUtil::updateFrameClassAndWindowIcon, executor);
     }
-    return future;
+
+    CompletableFuture<Void> instrumentationFuture = new CompletableFuture<>();
+    if (isUsingSeparateWriteThread()) {
+      executor.execute(() -> {
+        Activity activity = StartUpMeasurer.startActivity("Write Intent Lock UI class transformer loading");
+        try {
+          WriteIntentLockInstrumenter.instrument();
+        }
+        finally {
+          activity.end();
+          instrumentationFuture.complete(null);
+        }
+      });
+    }
+    else {
+      instrumentationFuture.complete(null);
+    }
+
+    return CompletableFuture.allOf(initUiFuture, instrumentationFuture);
   }
 
   private static void updateFrameClassAndWindowIcon() {
@@ -343,18 +430,18 @@ public final class StartupUtil {
         Class.forName("com.sun.jdi.Field", false, StartupUtil.class.getClassLoader());  // trying to find a JDK class
       }
       catch (ClassNotFoundException | LinkageError e) {
-        String message = "Cannot load a JDK class: " + e.getMessage() + "\nPlease ensure you run the IDE on JDK rather than JRE.";
-        Main.showMessage("JDK Required", message, true);
+        String message = BootstrapBundle.message(
+          "bootstrap.error.title.cannot.load.jdk.class.reason.0.please.ensure.you.run.the.ide.on.jdk.rather.than.jre", e.getMessage()
+        );
+        Main.showMessage(BootstrapBundle.message("bootstrap.error.title.jdk.required"), message, true);
         return false;
       }
     }
 
-    if ("true".equals(System.getProperty("idea.64bit.check"))) {
-      if (PlatformUtils.isCidr() && !SystemInfo.is64Bit) {
-        String message = "32-bit JVM is not supported. Please use a 64-bit version.";
-        Main.showMessage("Unsupported JVM", message, true);
-        return false;
-      }
+    if ("true".equals(System.getProperty("idea.64bit.check")) && !SystemInfoRt.is64Bit && PlatformUtils.isCidr()) {
+      Main.showMessage(BootstrapBundle.message("bootstrap.error.title.unsupported.jvm"),
+                       BootstrapBundle.message("bootstrap.error.message.use.64.jvm.instead.of.32"), true);
+      return false;
     }
 
     return true;
@@ -366,69 +453,70 @@ public final class StartupUtil {
   }
 
   private static void checkHiDPISettings() {
-    if (!SystemProperties.getBooleanProperty("hidpi", true)) {
+    if (!Boolean.parseBoolean(System.getProperty("hidpi", "true"))) {
       // suppress JRE-HiDPI mode
       System.setProperty("sun.java2d.uiScale.enabled", "false");
     }
   }
 
-  private static synchronized boolean checkSystemDirs() {
-    String configPath = PathManager.getConfigPath();
-    PathManager.ensureConfigFolderExists();
+  private static boolean checkSystemDirs(@NotNull Path configPath, @NotNull Path systemPath) {
+    if (configPath.equals(systemPath)) {
+      Main.showMessage(BootstrapBundle.message("bootstrap.error.title.invalid.config.or.system.path"),
+                       BootstrapBundle.message("bootstrap.error.message.config.0.and.system.1.paths.must.be.different",
+                                               PathManager.PROPERTY_CONFIG_PATH,
+                                               PathManager.PROPERTY_SYSTEM_PATH), true);
+      return false;
+    }
+
     if (!checkDirectory(configPath, "Config", PathManager.PROPERTY_CONFIG_PATH, true, true, false)) {
       return false;
     }
 
-    String systemPath = PathManager.getSystemPath();
     if (!checkDirectory(systemPath, "System", PathManager.PROPERTY_SYSTEM_PATH, true, true, false)) {
       return false;
     }
 
-    if (FileUtil.pathsEqual(configPath, systemPath)) {
-      String message = "Config and system paths seem to be equal.\n\n" +
-                       "If you have modified '" + PathManager.PROPERTY_CONFIG_PATH + "' or '" + PathManager.PROPERTY_SYSTEM_PATH + "' properties,\n" +
-                       "please make sure they point to different directories, otherwise please re-install the IDE.";
-      Main.showMessage("Invalid Config or System Path", message, true);
+    Path logPath = Paths.get(PathManager.getLogPath()).normalize();
+    if (!checkDirectory(logPath, "Log", PathManager.PROPERTY_LOG_PATH, !logPath.startsWith(systemPath), false, false)) {
       return false;
     }
 
-    String logPath = PathManager.getLogPath(), tempPath = PathManager.getTempPath();
-    return checkDirectory(logPath, "Log", PathManager.PROPERTY_LOG_PATH, !FileUtil.isAncestor(systemPath, logPath, true), false, false) &&
-           checkDirectory(tempPath, "Temp", PathManager.PROPERTY_SYSTEM_PATH, !FileUtil.isAncestor(systemPath, tempPath, true), false, SystemInfo.isXWindow);
+    Path tempPath = Paths.get(PathManager.getTempPath()).normalize();
+    return checkDirectory(tempPath, "Temp", PathManager.PROPERTY_SYSTEM_PATH, !tempPath.startsWith(systemPath),
+                          false, SystemInfoRt.isUnix && !SystemInfoRt.isMac);
   }
 
-  private static boolean checkDirectory(String path, String kind, String property, boolean checkWrite, boolean checkLock, boolean checkExec) {
-    String problem = null, reason = null;
+  private static boolean checkDirectory(@NotNull Path directory, String kind, String property, boolean checkWrite, boolean checkLock, boolean checkExec) {
+    String problem = null;
+    String reason = null;
     Path tempFile = null;
 
     try {
-      problem = "cannot create the directory";
-      reason = "path is incorrect";
-      Path directory = Paths.get(path);
-
+      problem = "bootstrap.error.message.check.ide.directory.problem.cannot.create.the.directory";
+      reason = "bootstrap.error.message.check.ide.directory.possible.reason.path.is.incorrect";
       if (!Files.isDirectory(directory)) {
-        problem = "cannot create the directory";
-        reason = "parent directory is read-only or the user lacks necessary permissions";
+        problem = "bootstrap.error.message.check.ide.directory.problem.cannot.create.the.directory";
+        reason = "bootstrap.error.message.check.ide.directory.possible.reason.directory.is.read.only.or.the.user.lacks.necessary.permissions";
         Files.createDirectories(directory);
       }
 
       if (checkWrite || checkLock || checkExec) {
-        problem = "cannot create a temporary file in the directory";
-        reason = "the directory is read-only or the user lacks necessary permissions";
+        problem = "bootstrap.error.message.check.ide.directory.problem.the.ide.cannot.create.a.temporary.file.in.the.directory";
+        reason = "bootstrap.error.message.check.ide.directory.possible.reason.directory.is.read.only.or.the.user.lacks.necessary.permissions";
         tempFile = directory.resolve("ij" + new Random().nextInt(Integer.MAX_VALUE) + ".tmp");
         OpenOption[] options = {StandardOpenOption.CREATE_NEW, StandardOpenOption.WRITE};
         Files.write(tempFile, "#!/bin/sh\nexit 0".getBytes(StandardCharsets.UTF_8), options);
 
         if (checkLock) {
-          problem = "cannot create a lock file in the directory";
-          reason = "the directory is located on a network disk";
+          problem = "bootstrap.error.message.check.ide.directory.problem.the.ide.cannot.create.a.lock.in.directory";
+          reason = "bootstrap.error.message.check.ide.directory.possible.reason.the.directory.is.located.on.a.network.disk";
           try (FileChannel channel = FileChannel.open(tempFile, StandardOpenOption.WRITE); FileLock lock = channel.tryLock()) {
             if (lock == null) throw new IOException("File is locked");
           }
         }
         else if (checkExec) {
-          problem = "cannot execute a test script in the directory";
-          reason = "the partition is mounted with 'no exec' option";
+          problem = "bootstrap.error.message.check.ide.directory.problem.the.ide.cannot.execute.test.script";
+          reason = "bootstrap.error.message.check.ide.directory.possible.reason.partition.is.mounted.with.no.exec.option";
           Files.getFileAttributeView(tempFile, PosixFileAttributeView.class).setPermissions(EnumSet.of(OWNER_READ, OWNER_WRITE, OWNER_EXECUTE));
           int ec = new ProcessBuilder(tempFile.toAbsolutePath().toString()).start().waitFor();
           if (ec != 0) {
@@ -440,31 +528,34 @@ public final class StartupUtil {
       return true;
     }
     catch (Exception e) {
-      String title = "Invalid " + kind + " Directory";
-      String advice = SystemInfo.isMac && PathManager.getSystemPath().contains(MAGIC_MAC_PATH)
-                      ? "The application seems to be trans-located by macOS and cannot be used in this state.\n" +
-                        "Please use Finder to move it to another location."
-                      : "If you have modified the '" + property + "' property, please make sure it is correct,\n" +
-                        "otherwise, please re-install the IDE.";
-      String message = "The IDE " + problem + ".\nPossible reason: " + reason + ".\n\n" + advice +
-                       "\n\n-----\nLocation: " + path + "\n" + e.getClass().getName() + ": " + e.getMessage();
+      String title = BootstrapBundle.message("bootstrap.error.title.invalid.ide.directory.type.0.directory", kind);
+      String advice = SystemInfoRt.isMac && PathManager.getSystemPath().contains(MAGIC_MAC_PATH)
+                      ? BootstrapBundle.message("bootstrap.error.message.invalid.ide.directory.trans.located.macos.directory.advice")
+                      : BootstrapBundle.message("bootstrap.error.message.invalid.ide.directory.ensure.the.modified.property.0.is.correct", property);
+      String message = BootstrapBundle.message("bootstrap.error.message.invalid.ide.directory.problem.0.possible.reason.1.advice.2.location.3.exception.class.4.exception.message.5",
+                                               BootstrapBundle.message(problem), BootstrapBundle.message(reason), advice, directory, e.getClass().getName(), e.getMessage());
       Main.showMessage(title, message, true);
       return false;
     }
     finally {
       if (tempFile != null) {
-        try { Files.deleteIfExists(tempFile); }
-        catch (Exception ignored) { }
+        try {
+          Files.deleteIfExists(tempFile);
+        }
+        catch (Exception ignored) {
+        }
       }
     }
   }
 
-  private static synchronized void lockSystemDirs(String[] args) throws Exception {
-    if (ourSocketLock != null) throw new AssertionError();
-    ourSocketLock = new SocketLock(PathManager.getConfigPath(), PathManager.getSystemPath());
+  private static void lockSystemDirs(@NotNull Path configPath, @NotNull Path systemPath, @NotNull String @NotNull[] args) throws Exception {
+    if (ourSocketLock != null) {
+      throw new AssertionError("Already initialized");
+    }
+    ourSocketLock = new SocketLock(configPath, systemPath);
 
-    Pair<SocketLock.ActivationStatus, CliResult> status = ourSocketLock.lockAndTryActivate(args);
-    switch (status.first) {
+    Map.Entry<SocketLock.ActivationStatus, CliResult> status = ourSocketLock.lockAndTryActivate(args);
+    switch (status.getKey()) {
       case NO_INSTANCE: {
         ShutDownTracker.getInstance().registerShutdownTask(() -> {
           //noinspection SynchronizeOnThis
@@ -477,7 +568,7 @@ public final class StartupUtil {
       }
 
       case ACTIVATED: {
-        CliResult result = status.second;
+        CliResult result = status.getValue();
         String message = result.message;
         if (message == null) message = "Already running";
         //noinspection UseOfSystemOutOrSystemErr
@@ -486,40 +577,39 @@ public final class StartupUtil {
       }
 
       case CANNOT_ACTIVATE: {
-        String message = "Only one instance of " + ApplicationNamesInfo.getInstance().getProductName() + " can be run at a time.";
-        Main.showMessage("Too Many Instances", message, true);
+        String message = BootstrapBundle.message("bootstrap.error.message.only.one.instance.of.0.can.be.run.at.a.time", ApplicationNamesInfo.getInstance().getProductName());
+        Main.showMessage(BootstrapBundle.message("bootstrap.error.title.too.many.instances"), message, true);
         System.exit(Main.INSTANCE_CHECK_FAILED);
       }
     }
   }
 
   @SuppressWarnings("UseOfSystemOutOrSystemErr")
-  @NotNull
-  private static Logger setupLogger() {
-    Logger.setFactory(new LoggerFactory());
-    Logger log = Logger.getInstance("#com.intellij.idea.Main");
+  private static @NotNull Logger setupLogger() {
+    try {
+      Logger.setFactory(new LoggerFactory());
+    }
+    catch (Exception e) {
+      //noinspection CallToPrintStackTrace
+      e.printStackTrace();
+    }
+    Logger log = Logger.getInstance(Main.class);
     log.info("------------------------------------------------------ IDE STARTED ------------------------------------------------------");
     ShutDownTracker.getInstance().registerShutdownTask(() -> {
       log.info("------------------------------------------------------ IDE SHUTDOWN ------------------------------------------------------");
     });
-    if (SystemProperties.getBooleanProperty("intellij.log.stdout", false)) {
+    if (Boolean.parseBoolean(System.getProperty("intellij.log.stdout", "true"))) {
       System.setOut(new PrintStreamLogger("STDOUT", System.out));
       System.setErr(new PrintStreamLogger("STDERR", System.err));
+      // Disabling output to System.err seems to be the only way to avoid deadlock (https://youtrack.jetbrains.com/issue/IDEA-243708)
+      // with Log4j 1.x if an internal error happens during logging (e.g. a disk space issue).
+      // Should be revisited in case of migration to Log4j 2.
+      LogLog.setQuietMode(true);
     }
     return log;
   }
 
-  private static void fixProcessEnvironment() {
-    Activity subActivity = StartUpMeasurer.startActivity("process env fixing");
-
-    if (!Main.isCommandLine()) {
-      System.setProperty("__idea.mac.env.lock", "unlocked");
-    }
-
-    EnvironmentUtil.loadEnv()
-      .thenRun(() -> subActivity.end());
-  }
-
+  @SuppressWarnings("SpellCheckingInspection")
   private static void setupSystemLibraries() {
     Activity subActivity = StartUpMeasurer.startActivity("system libs setup");
 
@@ -532,7 +622,7 @@ public final class StartupUtil {
       System.setProperty("jna.nosys", "true");  // prefer bundled JNA dispatcher lib
     }
 
-    if (SystemInfo.isWindows && System.getProperty("winp.folder.preferred") == null) {
+    if (SystemInfoRt.isWindows && System.getProperty("winp.folder.preferred") == null) {
       System.setProperty("winp.folder.preferred", ideTempPath);
     }
 
@@ -545,33 +635,32 @@ public final class StartupUtil {
     subActivity.end();
   }
 
-  private static void loadSystemLibraries(Logger log) {
+  private static void loadSystemLibraries(@NotNull Logger log) {
     Activity activity = StartUpMeasurer.startActivity("system libs loading");
-
     JnaLoader.load(log);
-
     //noinspection ResultOfMethodCallIgnored
     IdeaWin32.isAvailable();
-
     activity.end();
   }
 
   private static void logEssentialInfoAboutIde(@NotNull Logger log, @NotNull ApplicationInfo appInfo) {
+    Activity activity = StartUpMeasurer.startActivity("essential IDE info logging");
+
     ApplicationNamesInfo namesInfo = ApplicationNamesInfo.getInstance();
     String buildDate = new SimpleDateFormat("dd MMM yyyy HH:mm", Locale.US).format(appInfo.getBuildDate().getTime());
     log.info("IDE: " + namesInfo.getFullProductName() + " (build #" + appInfo.getBuild().asString() + ", " + buildDate + ")");
-    log.info("OS: " + SystemInfo.OS_NAME + " (" + SystemInfo.OS_VERSION + ", " + SystemInfo.OS_ARCH + ")");
+    log.info("OS: " + SystemInfoRt.OS_NAME + " (" + SystemInfoRt.OS_VERSION + ", " + System.getProperty("os.arch") + ")");
     log.info("JRE: " + System.getProperty("java.runtime.version", "-") + " (" + System.getProperty("java.vendor", "-") + ")");
     log.info("JVM: " + System.getProperty("java.vm.version", "-") + " (" + System.getProperty("java.vm.name", "-") + ")");
 
     List<String> arguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
     if (arguments != null) {
-      log.info("JVM Args: " + StringUtil.join(arguments, " "));
+      log.info("JVM Args: " + String.join(" ", arguments));
     }
 
     String extDirs = System.getProperty("java.ext.dirs");
     if (extDirs != null) {
-      for (String dir : StringUtil.split(extDirs, File.pathSeparator)) {
+      for (String dir : extDirs.split(File.pathSeparator)) {
         String[] content = new File(dir).list();
         if (content != null && content.length > 0) {
           log.info("ext: " + dir + ": " + Arrays.toString(content));
@@ -579,24 +668,38 @@ public final class StartupUtil {
       }
     }
 
-    log.info("charsets: JNU=" + System.getProperty("sun.jnu.encoding") + " file=" + System.getProperty("file.encoding"));
+    log.info("library path: " + System.getProperty("java.library.path"));
+    log.info("boot library path: " + System.getProperty("sun.boot.library.path"));
+
+    logEnvVar(log, "_JAVA_OPTIONS");
+    logEnvVar(log, "JDK_JAVA_OPTIONS");
+    logEnvVar(log, "JAVA_TOOL_OPTIONS");
+
+    log.info(
+      "locale=" + Locale.getDefault() +
+      " JNU=" + System.getProperty("sun.jnu.encoding") +
+      " file.encoding=" + System.getProperty("file.encoding") +
+      "\n  " + PathManager.PROPERTY_CONFIG_PATH + '=' + logPath(PathManager.getConfigPath()) +
+      "\n  " + PathManager.PROPERTY_SYSTEM_PATH + '=' + logPath(PathManager.getSystemPath()) +
+      "\n  " + PathManager.PROPERTY_PLUGINS_PATH + '=' + logPath(PathManager.getPluginsPath()) +
+      "\n  " + PathManager.PROPERTY_LOG_PATH + '=' + logPath(PathManager.getLogPath())
+    );
+
+    activity.end();
   }
 
-  private static void installPluginUpdates() {
-    if (!Main.isCommandLine() || Boolean.getBoolean(FORCE_PLUGIN_UPDATES)) {
-      try {
-        StartupActionScriptManager.executeActionScript();
-      }
-      catch (IOException e) {
-        String message =
-          "The IDE failed to install some plugins.\n\n" +
-          "Most probably, this happened because of a change in a serialization format.\n" +
-          "Please try again, and if the problem persists, please report it\n" +
-          "to http://jb.gg/ide/critical-startup-errors" +
-          "\n\nThe cause: " + e.getMessage();
-        Main.showMessage("Plugin Installation Error", message, false);
-      }
+  private static void logEnvVar(Logger log, String var) {
+    String value = System.getenv(var);
+    if (value != null) log.info(var + '=' + value);
+  }
+
+  private static String logPath(String path) {
+    try {
+      Path configured = Paths.get(path), real = configured.toRealPath();
+      if (!configured.equals(real)) return path + " -> " + real;
     }
+    catch (IOException | InvalidPathException ignored) { }
+    return path;
   }
 
   private static void runStartupWizard(@NotNull AppStarter appStarter) {
@@ -608,15 +711,28 @@ public final class StartupUtil {
     CustomizeIDEWizardStepsProvider provider;
     try {
       Class<?> providerClass = Class.forName(stepsProviderName);
-      provider = (CustomizeIDEWizardStepsProvider)providerClass.newInstance();
+      provider = (CustomizeIDEWizardStepsProvider)providerClass.getDeclaredConstructor().newInstance();
     }
     catch (Throwable e) {
-      Main.showMessage("Configuration Wizard Failed", e);
+      Main.showMessage(BootstrapBundle.message("bootstrap.error.title.configuration.wizard.failed"), e);
       return;
     }
 
     appStarter.beforeStartupWizard();
-    new CustomizeIDEWizardDialog(provider, appStarter, true, false).showIfNeeded();
+
+    String stepsDialogName = ApplicationInfoImpl.getShadowInstance().getCustomizeIDEWizardDialog();
+    if (stepsDialogName != null) {
+      try {
+        Class<?> dialogClass = Class.forName(stepsDialogName);
+        Constructor<?> constr = dialogClass.getConstructor(CustomizeIDEWizardStepsProvider.class, AppStarter.class, boolean.class, boolean.class);
+        ((CommonCustomizeIDEWizardDialog) constr.newInstance(provider, appStarter, true, false)).showIfNeeded();
+      } catch (Throwable e) {
+        Main.showMessage(BootstrapBundle.message("bootstrap.error.title.configuration.wizard.failed"), e);
+        return;
+      }
+    } else if (Boolean.parseBoolean(System.getProperty("idea.show.customize.ide.wizard"))) {
+        new CustomizeIDEWizardDialog(provider, appStarter, true, false).showIfNeeded();
+    }
 
     PluginManagerCore.invalidatePlugins();
     appStarter.startupWizardFinished(provider);
@@ -649,23 +765,11 @@ public final class StartupUtil {
   }
 
   private static void patchSystemForUi(@NotNull Logger log) {
-    // Using custom RepaintManager disables BufferStrategyPaintManager (and so, true double buffering)
-    // because the only non-private constructor forces RepaintManager.BUFFER_STRATEGY_TYPE = BUFFER_STRATEGY_SPECIFIED_OFF.
-    //
-    // At the same time, http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6209673 seems to be now fixed.
-    //
-    // This matters only if {@code swing.bufferPerWindow = true} and we don't invoke JComponent.getGraphics() directly.
-    //
-    // True double buffering is needed to eliminate tearing on blit-accelerated scrolling and to restore
-    // frame buffer content without the usual repainting, even when the EDT is blocked.
-    if (Patches.REPAINT_MANAGER_LEAK) {
-      RepaintManager.setCurrentManager(new IdeRepaintManager());
-    }
-    else if ("true".equals(System.getProperty("idea.check.swing.threading"))) {
+    if ("true".equals(System.getProperty("idea.check.swing.threading"))) {
       RepaintManager.setCurrentManager(new AssertiveRepaintManager());
     }
 
-    if (SystemInfo.isXWindow) {
+    if (SystemInfoRt.isXWindow) {
       String wmName = X11UiUtil.getWmName();
       log.info("WM detected: " + wmName);
       if (wmName != null) {
@@ -676,26 +780,26 @@ public final class StartupUtil {
     IconManager.activate();
   }
 
-  private static void showUserAgreementAndConsentsIfNeeded(@NotNull Logger log, @NotNull CompletableFuture<?> initUiTask) {
-    if (!ApplicationInfoImpl.getShadowInstance().isVendorJetBrains()) {
-      return;
-    }
-
+  private static boolean showUserAgreementAndConsentsIfNeeded(@NotNull Logger log,
+                                                              @NotNull CompletableFuture<?> initUiTask,
+                                                              @NotNull EndUserAgreement.Document agreement) {
+    boolean dialogWasShown = false;
     EndUserAgreement.updateCachedContentToLatestBundledVersion();
-    EndUserAgreement.Document agreement = EndUserAgreement.getLatestDocument();
     if (!agreement.isAccepted()) {
       // todo: does not seem to request focus when shown
-      runInEdtAndWait(log, () -> AppUIUtil.showEndUserAgreementText(agreement.getText(), agreement.isPrivacyPolicy()), initUiTask);
-      EndUserAgreement.setAccepted(agreement);
+      runInEdtAndWait(log, () -> Agreements.INSTANCE.showEndUserAndDataSharingAgreements(agreement), initUiTask);
+      dialogWasShown = true;
+    } else {
+      if (ConsentOptions.getInstance().getConsents().second) {
+        runInEdtAndWait(log, Agreements.INSTANCE::showDataSharingAgreement, initUiTask);
+      }
     }
-
-    AppUIUtil.showConsentsAgreementIfNeeded(command -> runInEdtAndWait(log, command, initUiTask));
+    return dialogWasShown;
   }
 
   private static void runInEdtAndWait(@NotNull Logger log, @NotNull Runnable runnable, @NotNull CompletableFuture<?> initUiTask) {
+    initUiTask.join();
     try {
-      initUiTask.get();
-
       if (!ourSystemPatched.get()) {
         EventQueue.invokeAndWait(() -> {
           if (!patchSystem(log)) {
@@ -716,8 +820,24 @@ public final class StartupUtil {
       // this invokeAndWait() call is needed to place on a freshly minted IdeEventQueue instance
       EventQueue.invokeAndWait(runnable);
     }
-    catch (InterruptedException | InvocationTargetException | ExecutionException e) {
+    catch (InterruptedException | InvocationTargetException e) {
       log.warn(e);
+    }
+  }
+
+  public static @NotNull Path canonicalPath(@NotNull String path) {
+    try {
+      // toRealPath doesn't properly restore actual name of file on case-insensitive fs (see LockSupportTest.testUseCanonicalPathLock)
+      return Paths.get(new File(path).getCanonicalPath());
+    }
+    catch (IOException ignore) {
+      Path file = Paths.get(path);
+      try {
+        return file.toAbsolutePath().normalize();
+      }
+      catch (IOError ignored) {
+        return file.normalize();
+      }
     }
   }
 }
