@@ -1,21 +1,19 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.util.text;
 
 import com.intellij.ReviseWhenPortedToJDK;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
-import com.intellij.openapi.util.Comparing;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.util.*;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.text.*;
-import gnu.trove.TIntArrayList;
-import gnu.trove.TLongArrayList;
-import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.Contract;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import com.intellij.util.text.CharArrayUtil;
+import com.intellij.util.text.CharSequenceSubSequence;
+import com.intellij.util.text.MergingCharSequence;
+import com.intellij.util.text.StringFactory;
+import org.jetbrains.annotations.*;
 
 import javax.swing.text.MutableAttributeSet;
 import javax.swing.text.html.HTML;
@@ -25,7 +23,7 @@ import java.beans.Introspector;
 import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
-import java.util.StringTokenizer;
+import java.time.Duration;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -35,8 +33,6 @@ import java.util.stream.Collectors;
 //TeamCity inherits StringUtil: do not add private constructors!!!
 @SuppressWarnings("MethodOverridesStaticMethodOfSuperclass")
 public class StringUtil extends StringUtilRt {
-  private static final Logger LOG = Logger.getInstance(StringUtil.class);
-
   @SuppressWarnings("SpellCheckingInspection") private static final String VOWELS = "aeiouy";
   private static final Pattern EOL_SPLIT_KEEP_SEPARATORS = Pattern.compile("(?<=(\r\n|\n))|(?<=\r)(?=[^\n])");
   private static final Pattern EOL_SPLIT_PATTERN = Pattern.compile(" *(\r|\n|\r\n)+ *");
@@ -48,15 +44,14 @@ public class StringUtil extends StringUtilRt {
    * @return a lightweight CharSequence which results from replacing {@code [start, end)} range in the {@code charSeq} with {@code replacement}.
    * Works in O(1), but retains references to the passed char sequences, so please use something else if you want them to be garbage-collected.
    */
-  @NotNull
-  public static MergingCharSequence replaceSubSequence(@NotNull CharSequence charSeq, int start, int end, @NotNull CharSequence replacement) {
+  public static @NotNull MergingCharSequence replaceSubSequence(@NotNull CharSequence charSeq, int start, int end, @NotNull CharSequence replacement) {
     return new MergingCharSequence(
           new MergingCharSequence(new CharSequenceSubSequence(charSeq, 0, start), replacement),
           new CharSequenceSubSequence(charSeq, end, charSeq.length()));
   }
 
-  private static class MyHtml2Text extends HTMLEditorKit.ParserCallback {
-    @NotNull private final StringBuilder myBuffer = new StringBuilder();
+  private static final class MyHtml2Text extends HTMLEditorKit.ParserCallback {
+    private final @NotNull StringBuilder myBuffer = new StringBuilder();
     private final boolean myIsSkipStyleTag;
 
     private boolean myIsStyleTagOpened;
@@ -71,7 +66,7 @@ public class StringUtil extends StringUtilRt {
     }
 
     @Override
-    public void handleText(@NotNull char[] text, int pos) {
+    public void handleText(char @NotNull [] text, int pos) {
       if (!myIsStyleTagOpened) {
         myBuffer.append(text);
       }
@@ -103,8 +98,7 @@ public class StringUtil extends StringUtilRt {
       }
     }
 
-    @NotNull
-    public String getText() {
+    public @NotNull String getText() {
       return myBuffer.toString();
     }
   }
@@ -115,57 +109,50 @@ public class StringUtil extends StringUtilRt {
 
   public static final NotNullFunction<String, String> SINGLE_QUOTER = s -> "'" + s + "'";
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> getWordsInStringLongestFirst(@NotNull String find) {
+  public static @NotNull List<String> getWordsInStringLongestFirst(@NotNull String find) {
     List<String> words = getWordsIn(find);
     // hope long words are rare
     words.sort((o1, o2) -> o2.length() - o1.length());
     return words;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapePattern(@NotNull final String text) {
+  public static @NotNull String escapePattern(final @NotNull String text) {
     return replace(replace(text, "'", "''"), "{", "'{'");
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static <T> Function<T, String> createToStringFunction(@SuppressWarnings("unused") @NotNull Class<T> cls) {
+  public static @NotNull <T> Function<T, String> createToStringFunction(@SuppressWarnings("unused") @NotNull Class<T> cls) {
     return Object::toString;
   }
 
-  @NotNull
-  public static final Function<String, String> TRIMMER = StringUtil::trim;
+  public static final @NotNull Function<String, String> TRIMMER = StringUtil::trim;
 
   // Unlike String.replace(CharSequence,CharSequence) does not allocate intermediate objects on non-match
   // TODO revise when JDK9 arrives - its String.replace(CharSequence, CharSequence) is more optimized
   @ReviseWhenPortedToJDK("9")
-  @NotNull
   @Contract(pure = true)
-  public static String replace(@NotNull String text, @NotNull String oldS, @NotNull String newS) {
+  public static @NotNull String replace(@NotNull String text, @NotNull String oldS, @NotNull String newS) {
     return replace(text, oldS, newS, false);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String replaceIgnoreCase(@NotNull String text, @NotNull String oldS, @NotNull String newS) {
+  public static @NotNull String replaceIgnoreCase(@NotNull String text, @NotNull String oldS, @NotNull String newS) {
     return replace(text, oldS, newS, true);
   }
 
   /**
    * @deprecated Use {@link String#replace(char,char)} instead
    */
-  @NotNull
   @Contract(pure = true)
   @Deprecated
-  public static String replaceChar(@NotNull String buffer, char oldChar, char newChar) {
+  public static @NotNull String replaceChar(@NotNull String buffer, char oldChar, char newChar) {
     return buffer.replace(oldChar, newChar);
   }
 
   @Contract(pure = true)
-  public static String replace(@NotNull final String text, @NotNull final String oldS, @NotNull final String newS, final boolean ignoreCase) {
+  public static String replace(final @NotNull String text, final @NotNull String oldS, final @NotNull String newS, final boolean ignoreCase) {
     if (text.length() < oldS.length()) return text;
 
     StringBuilder newText = null;
@@ -199,7 +186,7 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static int indexOfIgnoreCase(@NotNull String where, @NotNull String what, int fromIndex) {
-    return indexOfIgnoreCase((CharSequence)where, what, fromIndex);
+    return Strings.indexOfIgnoreCase(where, what, fromIndex);
   }
 
   /**
@@ -207,58 +194,12 @@ public class StringUtil extends StringUtilRt {
    */
   @Contract(pure = true)
   public static int indexOfIgnoreCase(@NotNull CharSequence where, @NotNull CharSequence what, int fromIndex) {
-    int targetCount = what.length();
-    int sourceCount = where.length();
-
-    if (fromIndex >= sourceCount) {
-      return targetCount == 0 ? sourceCount : -1;
-    }
-
-    if (fromIndex < 0) {
-      fromIndex = 0;
-    }
-
-    if (targetCount == 0) {
-      return fromIndex;
-    }
-
-    char first = what.charAt(0);
-    int max = sourceCount - targetCount;
-
-    for (int i = fromIndex; i <= max; i++) {
-      /* Look for first character. */
-      if (!charsEqualIgnoreCase(where.charAt(i), first)) {
-        //noinspection StatementWithEmptyBody,AssignmentToForLoopParameter
-        while (++i <= max && !charsEqualIgnoreCase(where.charAt(i), first)) ;
-      }
-
-      /* Found first character, now look at the rest of v2 */
-      if (i <= max) {
-        int j = i + 1;
-        int end = j + targetCount - 1;
-        //noinspection StatementWithEmptyBody
-        for (int k = 1; j < end && charsEqualIgnoreCase(where.charAt(j), what.charAt(k)); j++, k++) ;
-
-        if (j == end) {
-          /* Found whole string. */
-          return i;
-        }
-      }
-    }
-
-    return -1;
+    return Strings.indexOfIgnoreCase(where, what, fromIndex);
   }
 
   @Contract(pure = true)
   public static int indexOfIgnoreCase(@NotNull String where, char what, int fromIndex) {
-    int sourceCount = where.length();
-    for (int i = Math.max(fromIndex, 0); i < sourceCount; i++) {
-      if (charsEqualIgnoreCase(where.charAt(i), what)) {
-        return i;
-      }
-    }
-
-    return -1;
+    return Strings.indexOfIgnoreCase(where, what, fromIndex);
   }
 
   @Contract(pure = true)
@@ -279,7 +220,7 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static boolean endsWithIgnoreCase(@NotNull String str, @NotNull String suffix) {
-    return StringUtilRt.endsWithIgnoreCase(str, suffix);
+    return Strings.endsWithIgnoreCase(str, suffix);
   }
 
   @Contract(pure = true)
@@ -288,8 +229,7 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  @NotNull
-  public static String stripHtml(@NotNull String html, boolean convertBreaks) {
+  public static @NotNull String stripHtml(@NotNull String html, boolean convertBreaks) {
     if (convertBreaks) {
       html = html.replaceAll("<br/?>", "\n\n");
     }
@@ -299,12 +239,12 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(value = "null -> null; !null -> !null", pure = true)
   public static String toLowerCase(@Nullable String str) {
-    return str == null ? null : str.toLowerCase(Locale.ENGLISH);
+    return Strings.toLowerCase(str);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getPackageName(@NotNull String fqName) {
+  @NlsSafe
+  public static @NotNull String getPackageName(@NotNull String fqName) {
     return getPackageName(fqName, '.');
   }
 
@@ -320,9 +260,9 @@ public class StringUtil extends StringUtilRt {
    * @param separator the separator to use. Typically '.'
    * @return the package name of the type or the declarator of the type. The empty string if the given fqName is unqualified
    */
-  @NotNull
   @Contract(pure = true)
-  public static String getPackageName(@NotNull String fqName, char separator) {
+  @NlsSafe
+  public static @NotNull String getPackageName(@NotNull String fqName, char separator) {
     int lastPointIdx = fqName.lastIndexOf(separator);
     if (lastPointIdx >= 0) {
       return fqName.substring(0, lastPointIdx);
@@ -363,9 +303,8 @@ public class StringUtil extends StringUtilRt {
     return c == '\n' || c == '\r';
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeLineBreak(@NotNull String text) {
+  public static @NotNull String escapeLineBreak(@NotNull String text) {
     StringBuilder buffer = new StringBuilder(text.length());
     for (int i = 0; i < text.length(); i++) {
       char c = text.charAt(i);
@@ -466,26 +405,22 @@ public class StringUtil extends StringUtilRt {
     return a[s1.length() - 1][s2.length() - 1];
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String wordsToBeginFromUpperCase(@NotNull String s) {
-    return fixCapitalization(s, ourPrepositions, true);
+  public static @NotNull String wordsToBeginFromUpperCase(@NotNull String s) {
+    return fixCapitalization(s, ArrayUtil.mergeArrays(ourPrepositions, ourOtherNonCapitalizableWords), true);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String wordsToBeginFromLowerCase(@NotNull String s) {
+  public static @NotNull String wordsToBeginFromLowerCase(@NotNull String s) {
     return fixCapitalization(s, ourPrepositions, false);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String toTitleCase(@NotNull String s) {
+  public static @NotNull String toTitleCase(@NotNull String s) {
     return fixCapitalization(s, ArrayUtilRt.EMPTY_STRING_ARRAY, true);
   }
 
-  @NotNull
-  private static String fixCapitalization(@NotNull String s, @NotNull String[] prepositions, boolean title) {
+  private static @NotNull String fixCapitalization(@NotNull String s, String @NotNull [] prepositions, boolean title) {
     StringBuilder buffer = null;
     for (int i = 0; i < s.length(); i++) {
       char prevChar = i == 0 ? ' ' : s.charAt(i - 1);
@@ -501,6 +436,15 @@ public class StringUtil extends StringUtilRt {
             }
             if (!title && j > i + 1 && !Character.isLowerCase(s.charAt(i + 1))) {
               // filter out abbreviations like I18n, SQL and CSS
+              continue;
+            }
+            char prevPrevChar = i > 1 ? s.charAt(i - 2) : 0;
+            if (prevChar == '.' && (prevPrevChar == ' ' || prevPrevChar == '*')) {
+              // file extension like .java or *.java; don't change its capitalization
+              continue;
+            }
+            if (prevChar == '~' && prevPrevChar == ' ') {
+              // special string like ~java or _java; keep it as is
               continue;
             }
             if (!isPreposition(s, i, j - 1, prepositions)) {
@@ -521,19 +465,28 @@ public class StringUtil extends StringUtilRt {
     "per", "nor", "the", "to", "up", "upon", "via", "with"
   };
 
+  private static final String[] ourOtherNonCapitalizableWords = {
+    "iOS", "iPhone", "iPad", "iMac"
+  };
+
+  /**
+   * @deprecated Use {@link #isPreposition(String, int, int, String[])}.
+   */
+  @ApiStatus.ScheduledForRemoval(inVersion = "2020.1")
+  @Deprecated
   @Contract(pure = true)
   public static boolean isPreposition(@NotNull String s, int firstChar, int lastChar) {
     return isPreposition(s, firstChar, lastChar, ourPrepositions);
   }
 
   @Contract(pure = true)
-  public static boolean isPreposition(@NotNull String s, int firstChar, int lastChar, @NotNull String[] prepositions) {
+  public static boolean isPreposition(@NotNull String s, int firstChar, int lastChar, String @NotNull [] prepositions) {
     for (String preposition : prepositions) {
       boolean found = false;
       if (lastChar - firstChar + 1 == preposition.length()) {
         found = true;
         for (int j = 0; j < preposition.length(); j++) {
-          if (toLowerCase(s.charAt(firstChar + j)) != preposition.charAt(j)) {
+          if (toLowerCase(s.charAt(firstChar + j)) != toLowerCase(preposition.charAt(j))) {
             found = false;
             break;
           }
@@ -546,9 +499,8 @@ public class StringUtil extends StringUtilRt {
     return false;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static NotNullFunction<String, String> escaper(final boolean escapeSlash, @Nullable final String additionalChars) {
+  public static @NotNull NotNullFunction<String, String> escaper(final boolean escapeSlash, final @Nullable String additionalChars) {
     return dom -> {
       final StringBuilder builder = new StringBuilder(dom.length());
       escapeStringCharacters(dom.length(), dom, additionalChars, escapeSlash, builder);
@@ -561,30 +513,27 @@ public class StringUtil extends StringUtilRt {
     escapeStringCharacters(length, str, "\"", buffer);
   }
 
-  @NotNull
-  public static StringBuilder escapeStringCharacters(int length,
-                                                     @NotNull String str,
-                                                     @Nullable String additionalChars,
-                                                     @NotNull StringBuilder buffer) {
+  public static @NotNull StringBuilder escapeStringCharacters(int length,
+                                                              @NotNull String str,
+                                                              @Nullable String additionalChars,
+                                                              @NotNull StringBuilder buffer) {
     return escapeStringCharacters(length, str, additionalChars, true, buffer);
   }
 
-  @NotNull
-  public static StringBuilder escapeStringCharacters(int length,
-                                                     @NotNull String str,
-                                                     @Nullable String additionalChars,
-                                                     boolean escapeSlash,
-                                                     @NotNull StringBuilder buffer) {
+  public static @NotNull StringBuilder escapeStringCharacters(int length,
+                                                              @NotNull String str,
+                                                              @Nullable String additionalChars,
+                                                              boolean escapeSlash,
+                                                              @NotNull StringBuilder buffer) {
     return escapeStringCharacters(length, str, additionalChars, escapeSlash, true, buffer);
   }
 
-  @NotNull
-  public static StringBuilder escapeStringCharacters(int length,
-                                                     @NotNull String str,
-                                                     @Nullable String additionalChars,
-                                                     boolean escapeSlash,
-                                                     boolean escapeUnicode,
-                                                     @NotNull StringBuilder buffer) {
+  public static @NotNull StringBuilder escapeStringCharacters(int length,
+                                                              @NotNull String str,
+                                                              @Nullable String additionalChars,
+                                                              boolean escapeSlash,
+                                                              boolean escapeUnicode,
+                                                              @NotNull StringBuilder buffer) {
     char prev = 0;
     for (int idx = 0; idx < length; idx++) {
       char ch = str.charAt(idx);
@@ -641,25 +590,22 @@ public class StringUtil extends StringUtilRt {
            t != Character.CONTROL && t != Character.FORMAT && t != Character.PRIVATE_USE && t != Character.SURROGATE;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeStringCharacters(@NotNull String s) {
+  public static @NotNull String escapeStringCharacters(@NotNull String s) {
     StringBuilder buffer = new StringBuilder(s.length());
     escapeStringCharacters(s.length(), s, "\"", buffer);
     return buffer.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeCharCharacters(@NotNull String s) {
+  public static @NotNull String escapeCharCharacters(@NotNull String s) {
     StringBuilder buffer = new StringBuilder(s.length());
-    escapeStringCharacters(s.length(), s, "\'", buffer);
+    escapeStringCharacters(s.length(), s, "'", buffer);
     return buffer.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String unescapeStringCharacters(@NotNull String s) {
+  public static @NotNull String unescapeStringCharacters(@NotNull String s) {
     StringBuilder buffer = new StringBuilder(s.length());
     unescapeStringCharacters(s.length(), s, buffer);
     return buffer.toString();
@@ -676,17 +622,15 @@ public class StringUtil extends StringUtilRt {
   }
 
   /**
-   * @return string with paired quotaion marks (quote (") or apostrophe (')) removed
+   * @return string with paired quotation marks (quote (") or apostrophe (')) removed
    */
-  @NotNull
   @Contract(pure = true)
-  public static String unquoteString(@NotNull String s) {
+  public static @NotNull String unquoteString(@NotNull String s) {
     return StringUtilRt.unquoteString(s);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String unquoteString(@NotNull String s, char quotationChar) {
+  public static @NotNull String unquoteString(@NotNull String s, char quotationChar) {
     return StringUtilRt.unquoteString(s, quotationChar);
   }
 
@@ -787,28 +731,29 @@ public class StringUtil extends StringUtilRt {
     if (escaped) buffer.append('\\');
   }
 
-  @NotNull
+  /**
+   * Pluralize English word. Could be used when e.g. generating collection name by element type.
+   * Do not use this method in localized context, as it works for English language only.
+   * 
+   * @param word word to pluralize
+   * @return word in plural form
+   */
   @Contract(pure = true)
-  public static String pluralize(@NotNull String word) {
-    String plural = Pluralizer.PLURALIZER.plural(word);
-    if (plural != null) return plural;
-    if (word.endsWith("s")) return Pluralizer.restoreCase(word, word + "es");
-    return Pluralizer.restoreCase(word, word + "s");
+  public static @NotNull @NonNls String pluralize(@NotNull @NonNls String word) {
+    return Strings.pluralize(word);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String capitalizeWords(@NotNull String text,
-                                       boolean allWords) {
+  public static @NotNull String capitalizeWords(@NotNull String text,
+                                                boolean allWords) {
     return capitalizeWords(text, " \t\n\r\f([<", allWords, true);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String capitalizeWords(@NotNull String text,
-                                       @NotNull String tokenizerDelim,
-                                       boolean allWords,
-                                       boolean leaveOriginalDelims) {
+  public static @NotNull String capitalizeWords(@NotNull String text,
+                                                @NotNull String tokenizerDelim,
+                                                boolean allWords,
+                                                boolean leaveOriginalDelims) {
     final StringTokenizer tokenizer = new StringTokenizer(text, tokenizerDelim, leaveOriginalDelims);
     final StringBuilder out = new StringBuilder(text.length());
     boolean toCapitalize = true;
@@ -825,9 +770,8 @@ public class StringUtil extends StringUtilRt {
     return out.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String decapitalize(@NotNull String s) {
+  public static @NotNull String decapitalize(@NotNull String s) {
     return Introspector.decapitalize(s);
   }
 
@@ -839,25 +783,18 @@ public class StringUtil extends StringUtilRt {
   /**
    * Capitalize the first letter of the sentence.
    */
-  @NotNull
   @Contract(pure = true)
-  public static String capitalize(@NotNull String s) {
-    if (s.isEmpty()) return s;
-    if (s.length() == 1) return toUpperCase(s);
-
-    // Optimization
-    if (Character.isUpperCase(s.charAt(0))) return s;
-    return toUpperCase(s.charAt(0)) + s.substring(1);
+  public static @NotNull String capitalize(@NotNull String s) {
+    return Strings.capitalize(s);
   }
 
   @Contract(value = "null -> false", pure = true)
   public static boolean isCapitalized(@Nullable String s) {
-    return s != null && !s.isEmpty() && Character.isUpperCase(s.charAt(0));
+    return Strings.isCapitalized(s);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String capitalizeWithJavaBeanConvention(@NotNull String s) {
+  public static @NotNull String capitalizeWithJavaBeanConvention(@NotNull String s) {
     if (s.length() > 1 && Character.isUpperCase(s.charAt(1))) {
       return s;
     }
@@ -876,71 +813,43 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static int stringHashCode(@NotNull CharSequence chars, int from, int to) {
-    return stringHashCode(chars, from, to, 0);
+    return Strings.stringHashCode(chars, from, to);
   }
 
   @Contract(pure = true)
   public static int stringHashCode(@NotNull CharSequence chars, int from, int to, int prefixHash) {
-    int h = prefixHash;
-    for (int off = from; off < to; off++) {
-      h = 31 * h + chars.charAt(off);
-    }
-    return h;
+    return Strings.stringHashCode(chars, from, to, prefixHash);
   }
 
   @Contract(pure = true)
   public static int stringHashCode(char[] chars, int from, int to) {
-    int h = 0;
-    for (int off = from; off < to; off++) {
-      h = 31 * h + chars[off];
-    }
-    return h;
+    return Strings.stringHashCode(chars, from, to);
   }
 
   @Contract(pure = true)
-  public static int stringHashCodeInsensitive(@NotNull char[] chars, int from, int to) {
-    int h = 0;
-    for (int off = from; off < to; off++) {
-      h = 31 * h + toLowerCase(chars[off]);
-    }
-    return h;
+  public static int stringHashCodeInsensitive(char @NotNull [] chars, int from, int to) {
+    return Strings.stringHashCodeInsensitive(chars, from, to);
   }
 
   @Contract(pure = true)
   public static int stringHashCodeInsensitive(@NotNull CharSequence chars, int from, int to) {
-    return stringHashCodeInsensitive(chars, from, to, 0);
+    return Strings.stringHashCodeInsensitive(chars, from, to);
   }
 
   @Contract(pure = true)
   public static int stringHashCodeInsensitive(@NotNull CharSequence chars, int from, int to, int prefixHash) {
-    int h = prefixHash;
-    for (int off = from; off < to; off++) {
-      h = 31 * h + toLowerCase(chars.charAt(off));
-    }
-    return h;
+    return Strings.stringHashCodeInsensitive(chars, from, to, prefixHash);
   }
 
   @Contract(pure = true)
   public static int stringHashCodeInsensitive(@NotNull CharSequence chars) {
-    return stringHashCodeInsensitive(chars, 0, chars.length());
+    return Strings.stringHashCodeInsensitive(chars);
   }
 
   @Contract(pure = true)
-  public static int stringHashCodeIgnoreWhitespaces(@NotNull char[] chars, int from, int to) {
+  public static int stringHashCodeIgnoreWhitespaces(@NotNull CharSequence chars) {
     int h = 0;
-    for (int off = from; off < to; off++) {
-      char c = chars[off];
-      if (!isWhiteSpace(c)) {
-        h = 31 * h + c;
-      }
-    }
-    return h;
-  }
-
-  @Contract(pure = true)
-  public static int stringHashCodeIgnoreWhitespaces(@NotNull CharSequence chars, int from, int to) {
-    int h = 0;
-    for (int off = from; off < to; off++) {
+    for (int off = 0; off < chars.length(); off++) {
       char c = chars.charAt(off);
       if (!isWhiteSpace(c)) {
         h = 31 * h + c;
@@ -949,16 +858,11 @@ public class StringUtil extends StringUtilRt {
     return h;
   }
 
-  @Contract(pure = true)
-  public static int stringHashCodeIgnoreWhitespaces(@NotNull CharSequence chars) {
-    return stringHashCodeIgnoreWhitespaces(chars, 0, chars.length());
-  }
-
   /**
    * Equivalent to string.startsWith(prefixes[0] + prefixes[1] + ...) but avoids creating an object for concatenation.
    */
   @Contract(pure = true)
-  public static boolean startsWithConcatenation(@NotNull String string, @NotNull String... prefixes) {
+  public static boolean startsWithConcatenation(@NotNull String string, String @NotNull ... prefixes) {
     int offset = 0;
     for (String prefix : prefixes) {
       int prefixLen = prefix.length();
@@ -972,100 +876,103 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(value = "null -> null; !null -> !null", pure = true)
   public static String trim(@Nullable String s) {
-    return s == null ? null : s.trim();
+    return Strings.trim(s);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimEnd(@NotNull String s, @NotNull String suffix) {
-    return trimEnd(s, suffix, false);
+  public static @NotNull String trimEnd(@NotNull String s, @NotNull String suffix) {
+    return Strings.trimEnd(s, suffix);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimEnd(@NotNull String s, @NotNull String suffix, boolean ignoreCase) {
-    boolean endsWith = ignoreCase ? endsWithIgnoreCase(s, suffix) : s.endsWith(suffix);
-    if (endsWith) {
-      return s.substring(0, s.length() - suffix.length());
-    }
-    return s;
+  public static @NotNull String trimEnd(@NotNull String s, @NotNull String suffix, boolean ignoreCase) {
+    return Strings.trimEnd(s, suffix, ignoreCase);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimEnd(@NotNull String s, char suffix) {
-    if (endsWithChar(s, suffix)) {
-      return s.substring(0, s.length() - 1);
-    }
-    return s;
+  public static @NotNull String trimEnd(@NotNull String s, char suffix) {
+    return Strings.trimEnd(s, suffix);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimLog(@NotNull final String text, final int limit) {
+  public static @NotNull String trimLog(final @NotNull String text, final int limit) {
     if (limit > 5 && text.length() > limit) {
       return text.substring(0, limit - 5) + " ...\n";
     }
     return text;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimLeading(@NotNull String string) {
+  public static @NotNull String trimLeading(@NotNull String string) {
     return trimLeading((CharSequence)string).toString();
   }
-  @NotNull
   @Contract(pure = true)
-  public static CharSequence trimLeading(@NotNull CharSequence string) {
+  public static @NotNull CharSequence trimLeading(@NotNull CharSequence string) {
     int index = 0;
     while (index < string.length() && Character.isWhitespace(string.charAt(index))) index++;
     return string.subSequence(index, string.length());
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimLeading(@NotNull String string, char symbol) {
+  public static @NotNull String trimLeading(@NotNull String string, char symbol) {
     int index = 0;
     while (index < string.length() && string.charAt(index) == symbol) index++;
     return string.substring(index);
   }
 
-  @NotNull
-  public static StringBuilder trimLeading(@NotNull StringBuilder builder, char symbol) {
+  public static @NotNull StringBuilder trimLeading(@NotNull StringBuilder builder, char symbol) {
     int index = 0;
     while (index < builder.length() && builder.charAt(index) == symbol) index++;
     if (index > 0) builder.delete(0, index);
     return builder;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimTrailing(@NotNull String string) {
+  public static @NotNull String trimTrailing(@NotNull String string) {
     return trimTrailing((CharSequence)string).toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static CharSequence trimTrailing(@NotNull CharSequence string) {
+  public static @NotNull CharSequence trimTrailing(@NotNull CharSequence string) {
     int index = string.length() - 1;
     while (index >= 0 && Character.isWhitespace(string.charAt(index))) index--;
     return string.subSequence(0, index + 1);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimTrailing(@NotNull String string, char symbol) {
+  public static @NotNull String trimTrailing(@NotNull String string, char symbol) {
     int index = string.length() - 1;
     while (index >= 0 && string.charAt(index) == symbol) index--;
     return string.substring(0, index + 1);
   }
 
-  @NotNull
-  public static StringBuilder trimTrailing(@NotNull StringBuilder builder, char symbol) {
+  public static @NotNull StringBuilder trimTrailing(@NotNull StringBuilder builder, char symbol) {
     int index = builder.length() - 1;
     while (index >= 0 && builder.charAt(index) == symbol) index--;
     builder.setLength(index + 1);
     return builder;
+  }
+
+  @Contract(value = "null -> null; !null -> !null", pure = true)
+  public static @Nullable CharSequence trim(@Nullable CharSequence s) {
+    if (s == null) return null;
+    int startIndex = 0;
+    int length = s.length();
+    if (length == 0) return s;
+    while (startIndex < length && Character.isWhitespace(s.charAt(startIndex))) startIndex++;
+
+    if (startIndex == length) {
+      return Strings.EMPTY_CHAR_SEQUENCE;
+    }
+
+    int endIndex = length - 1;
+    while (endIndex >= startIndex && Character.isWhitespace(s.charAt(endIndex))) endIndex--;
+    endIndex++;
+
+    if (startIndex > 0 || endIndex < length) {
+      return s.subSequence(startIndex, endIndex);
+    }
+    return s;
   }
 
   @Contract(pure = true)
@@ -1075,28 +982,25 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static boolean endsWithChar(@Nullable CharSequence s, char suffix) {
-    return StringUtilRt.endsWithChar(s, suffix);
+    return Strings.endsWithChar(s, suffix);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimStart(@NotNull String s, @NotNull String prefix) {
+  public static @NotNull String trimStart(@NotNull String s, @NotNull String prefix) {
     if (s.startsWith(prefix)) {
       return s.substring(prefix.length());
     }
     return s;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimExtensions(@NotNull String name) {
+  public static @NotNull String trimExtensions(@NotNull String name) {
     int index = name.indexOf('.');
     return index < 0 ? name : name.substring(0, index);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String pluralize(@NotNull String base, int count) {
+  public static @NotNull String pluralize(@NotNull String base, int count) {
     if (count == 1) return base;
     return pluralize(base);
   }
@@ -1109,7 +1013,7 @@ public class StringUtil extends StringUtilRt {
       }
     }
     catch (IOException e) {
-      LOG.error(e);
+      Logger.getInstance(StringUtil.class).error(e);
     }
   }
 
@@ -1120,17 +1024,17 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(value = "null -> false", pure = true)
   public static boolean isNotEmpty(@Nullable String s) {
-    return !isEmpty(s);
+    return Strings.isNotEmpty(s);
   }
 
   @Contract(value = "null -> true", pure = true)
   public static boolean isEmpty(@Nullable String s) {
-    return s == null || s.isEmpty();
+    return Strings.isEmpty(s);
   }
 
   @Contract(value = "null -> true",pure = true)
   public static boolean isEmpty(@Nullable CharSequence cs) {
-    return StringUtilRt.isEmpty(cs);
+    return Strings.isEmpty(cs);
   }
 
   @Contract(pure = true)
@@ -1138,36 +1042,29 @@ public class StringUtil extends StringUtilRt {
     return cs == null ? 0 : cs.length();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String notNullize(@Nullable String s) {
-    return StringUtilRt.notNullize(s);
+  public static @NotNull String notNullize(@Nullable String s) {
+    return Strings.notNullize(s);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String notNullize(@Nullable String s, @NotNull String defaultValue) {
-    return StringUtilRt.notNullize(s, defaultValue);
+  public static @NotNull String notNullize(@Nullable String s, @NotNull String defaultValue) {
+    return Strings.notNullize(s, defaultValue);
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String nullize(@Nullable String s) {
-    return nullize(s, false);
+  public static @Nullable String nullize(@Nullable String s) {
+    return Strings.nullize(s, false);
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String nullize(@Nullable String s, @Nullable String defaultValue) {
-    boolean empty = isEmpty(s) || Comparing.equal(s, defaultValue);
-    return empty ? null : s;
+  public static @Nullable String nullize(@Nullable String s, @Nullable String defaultValue) {
+    return Strings.nullize(s, defaultValue);
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String nullize(@Nullable String s, boolean nullizeSpaces) {
-    boolean empty = nullizeSpaces ? isEmptyOrSpaces(s) : isEmpty(s);
-    return empty ? null : s;
+  public static @Nullable String nullize(@Nullable String s, boolean nullizeSpaces) {
+    return Strings.nullize(s, nullizeSpaces);
   }
 
   @Contract(value = "null -> true",pure = true)
@@ -1178,7 +1075,7 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(value = "null -> true", pure = true)
   public static boolean isEmptyOrSpaces(@Nullable CharSequence s) {
-    return StringUtilRt.isEmptyOrSpaces(s);
+    return Strings.isEmptyOrSpaces(s);
   }
 
   /**
@@ -1192,29 +1089,25 @@ public class StringUtil extends StringUtilRt {
     return c == '\n' || c == '\t' || c == ' ';
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getThrowableText(@NotNull Throwable aThrowable) {
+  public static @NotNull String getThrowableText(@NotNull Throwable aThrowable) {
     return ExceptionUtil.getThrowableText(aThrowable);
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String getMessage(@NotNull Throwable e) {
+  public static @Nullable String getMessage(@NotNull Throwable e) {
     return ExceptionUtil.getMessage(e);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String repeatSymbol(final char aChar, final int count) {
+  public static @NotNull String repeatSymbol(final char aChar, final int count) {
     char[] buffer = new char[count];
     Arrays.fill(buffer, aChar);
     return StringFactory.createShared(buffer);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String repeat(@NotNull String s, int count) {
+  public static @NotNull String repeat(@NotNull String s, int count) {
     if (count == 0) return "";
     assert count >= 0 : count;
     StringBuilder sb = new StringBuilder(s.length() * count);
@@ -1224,40 +1117,34 @@ public class StringUtil extends StringUtilRt {
     return sb.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> splitHonorQuotes(@NotNull String s, char separator) {
+  public static @NotNull List<String> splitHonorQuotes(@NotNull String s, char separator) {
     return StringUtilRt.splitHonorQuotes(s, separator);
   }
 
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> split(@NotNull String s, @NotNull String separator) {
+  public static @NotNull List<String> split(@NotNull String s, @NotNull String separator) {
     return split(s, separator, true);
   }
-  @NotNull
   @Contract(pure = true)
-  public static List<CharSequence> split(@NotNull CharSequence s, @NotNull CharSequence separator) {
+  public static @NotNull List<CharSequence> split(@NotNull CharSequence s, @NotNull CharSequence separator) {
     return split(s, separator, true, true);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> split(@NotNull String s, @NotNull String separator, boolean excludeSeparator) {
+  public static @NotNull List<String> split(@NotNull String s, @NotNull String separator, boolean excludeSeparator) {
     return split(s, separator, excludeSeparator, true);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> split(@NotNull String s, @NotNull String separator, boolean excludeSeparator, boolean excludeEmptyStrings) {
+  public static @NotNull List<String> split(@NotNull String s, @NotNull String separator, boolean excludeSeparator, boolean excludeEmptyStrings) {
     //noinspection unchecked
     return (List)split((CharSequence)s, separator, excludeSeparator, excludeEmptyStrings);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<CharSequence> split(@NotNull CharSequence s, @NotNull CharSequence separator, boolean excludeSeparator, boolean excludeEmptyStrings) {
+  public static @NotNull List<CharSequence> split(@NotNull CharSequence s, @NotNull CharSequence separator, boolean excludeSeparator, boolean excludeEmptyStrings) {
     if (separator.length() == 0) {
       return Collections.singletonList(s);
     }
@@ -1279,9 +1166,8 @@ public class StringUtil extends StringUtilRt {
     return result;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static Iterable<String> tokenize(@NotNull String s, @NotNull String separators) {
+  public static @NotNull Iterable<String> tokenize(@NotNull String s, @NotNull String separators) {
     final com.intellij.util.text.StringTokenizer tokenizer = new com.intellij.util.text.StringTokenizer(s, separators);
     return () -> new Iterator<String>() {
       @Override
@@ -1301,9 +1187,8 @@ public class StringUtil extends StringUtilRt {
     };
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static Iterable<String> tokenize(@NotNull final StringTokenizer tokenizer) {
+  public static @NotNull Iterable<String> tokenize(final @NotNull StringTokenizer tokenizer) {
     return () -> new Iterator<String>() {
       @Override
       public boolean hasNext() {
@@ -1326,9 +1211,8 @@ public class StringUtil extends StringUtilRt {
    * @return list containing all words in {@code text}, or {@link ContainerUtil#emptyList()} if there are none.
    * The <b>word</b> here means the maximum sub-string consisting entirely of characters which are {@code Character.isJavaIdentifierPart(c)}.
    */
-  @NotNull
   @Contract(pure = true)
-  public static List<String> getWordsIn(@NotNull String text) {
+  public static @NotNull List<String> getWordsIn(@NotNull String text) {
     List<String> result = null;
     int start = -1;
     for (int i = 0; i < text.length(); i++) {
@@ -1357,9 +1241,8 @@ public class StringUtil extends StringUtilRt {
     return result;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<TextRange> getWordIndicesIn(@NotNull String text) {
+  public static @NotNull List<TextRange> getWordIndicesIn(@NotNull String text) {
     return getWordIndicesIn(text, null);
   }
 
@@ -1369,9 +1252,8 @@ public class StringUtil extends StringUtilRt {
    *                   Otherwise {@link Character#isJavaIdentifierPart(char)} will be used to determine whether a symbol is part of word.
    * @return ranges ranges of words in passed text.
    */
-  @NotNull
   @Contract(pure = true)
-  public static List<TextRange> getWordIndicesIn(@NotNull String text, @Nullable Set<Character> separatorsSet) {
+  public static @NotNull List<TextRange> getWordIndicesIn(@NotNull String text, @Nullable Set<Character> separatorsSet) {
     List<TextRange> result = new SmartList<>();
     int start = -1;
     for (int i = 0; i < text.length(); i++) {
@@ -1391,15 +1273,13 @@ public class StringUtil extends StringUtilRt {
     return result;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String join(@NotNull final String[] strings, @NotNull final String separator) {
+  public static @NotNull String join(final String @NotNull [] strings, final @NotNull String separator) {
     return join(strings, 0, strings.length, separator);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String join(@NotNull final String[] strings, int startIndex, int endIndex, @NotNull final String separator) {
+  public static @NotNull String join(final String @NotNull [] strings, int startIndex, int endIndex, final @NotNull String separator) {
     final StringBuilder result = new StringBuilder();
     for (int i = startIndex; i < endIndex; i++) {
       if (i > startIndex) result.append(separator);
@@ -1408,9 +1288,8 @@ public class StringUtil extends StringUtilRt {
     return result.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String[] zip(@NotNull String[] strings1, @NotNull String[] strings2, String separator) {
+  public static String @NotNull [] zip(String @NotNull [] strings1, String @NotNull [] strings2, String separator) {
     if (strings1.length != strings2.length) throw new IllegalArgumentException();
 
     String[] result = ArrayUtil.newStringArray(strings1.length);
@@ -1421,9 +1300,8 @@ public class StringUtil extends StringUtilRt {
     return result;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String[] surround(@NotNull String[] strings, @NotNull String prefix, @NotNull String suffix) {
+  public static String @NotNull [] surround(String @NotNull [] strings, @NotNull String prefix, @NotNull String suffix) {
     String[] result = ArrayUtil.newStringArray(strings.length);
     for (int i = 0; i < result.length; i++) {
       result[i] = prefix + strings[i] + suffix;
@@ -1431,24 +1309,22 @@ public class StringUtil extends StringUtilRt {
     return result;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static <T> String join(@NotNull T[] items, @NotNull Function<? super T, String> f, @NotNull String separator) {
+  public static @NotNull <T> String join(T @NotNull [] items, @NotNull Function<? super T, String> f, @NotNull String separator) {
     return join(Arrays.asList(items), f, separator);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static <T> String join(@NotNull Collection<? extends T> items,
-                                @NotNull Function<? super T, String> f,
-                                @NotNull String separator) {
+  public static @NotNull <T> String join(@NotNull Collection<? extends T> items,
+                                         @NotNull Function<? super T, String> f,
+                                         @NotNull String separator) {
     if (items.isEmpty()) return "";
     if (items.size() == 1) return notNullize(f.fun(items.iterator().next()));
     return join((Iterable<? extends T>)items, f, separator);
   }
 
   @Contract(pure = true)
-  public static String join(@NotNull Iterable<?> items, @NotNull String separator) {
+  public static @NotNull String join(@NotNull Iterable<?> items, @NotNull String separator) {
     StringBuilder result = new StringBuilder();
     for (Object item : items) {
       result.append(item).append(separator);
@@ -1459,23 +1335,22 @@ public class StringUtil extends StringUtilRt {
     return result.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static <T> String join(@NotNull Iterable<? extends T> items,
-                                @NotNull Function<? super T, String> f,
-                                @NotNull String separator) {
+  public static @NotNull <T> String join(@NotNull Iterable<? extends T> items,
+                                         @NotNull Function<? super T, ? extends CharSequence> f,
+                                         @NotNull String separator) {
     StringBuilder result = new StringBuilder();
     join(items, f, separator, result);
     return result.toString();
   }
 
   public static <T> void join(@NotNull Iterable<? extends T> items,
-                              @NotNull Function<? super T, String> f,
+                              @NotNull Function<? super T, ? extends CharSequence> f,
                               @NotNull String separator,
                               @NotNull StringBuilder result) {
     boolean isFirst = true;
     for (T item : items) {
-      String string = f.fun(item);
+      CharSequence string = f.fun(item);
       if (!isEmpty(string)) {
         if (isFirst) {
           isFirst = false;
@@ -1488,9 +1363,8 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String join(@NotNull Collection<String> strings, @NotNull String separator) {
+  public static @NotNull String join(@NotNull Collection<String> strings, @NotNull String separator) {
     if (strings.size() <= 1) {
       return notNullize(ContainerUtil.getFirstItem(strings));
     }
@@ -1514,9 +1388,8 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String join(@NotNull final int[] strings, @NotNull final String separator) {
+  public static @NotNull String join(final int @NotNull [] strings, final @NotNull String separator) {
     final StringBuilder result = new StringBuilder();
     for (int i = 0; i < strings.length; i++) {
       if (i > 0) result.append(separator);
@@ -1525,9 +1398,8 @@ public class StringUtil extends StringUtilRt {
     return result.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String join(@NotNull final String... strings) {
+  public static @NotNull String join(final String @NotNull ... strings) {
     if (strings.length == 0) return "";
 
     final StringBuilder builder = new StringBuilder();
@@ -1537,7 +1409,8 @@ public class StringUtil extends StringUtilRt {
     return builder.toString();
   }
 
-  public static Collector<CharSequence, ?, String> joining() {
+  @Contract(pure = true)
+  public static @NotNull Collector<CharSequence, ?, String> joining() {
     return Collectors.joining(", ");
   }
 
@@ -1547,9 +1420,8 @@ public class StringUtil extends StringUtilRt {
    *   Quotes are removed even if leading and trailing quotes are different or
    *                           if there is only one quote (leading or trailing).
    */
-  @NotNull
   @Contract(pure = true)
-  public static String stripQuotesAroundValue(@NotNull String text) {
+  public static @NotNull String stripQuotesAroundValue(@NotNull String text) {
     final int len = text.length();
     if (len > 0) {
       final int from = isQuoteAt(text, 0) ? 1 : 0;
@@ -1562,95 +1434,59 @@ public class StringUtil extends StringUtilRt {
   }
 
   /** Formats given file size in metric (1 kB = 1000 B) units (example: {@code formatFileSize(1234) = "1.23 KB"}). */
-  @NotNull
   @Contract(pure = true)
-  public static String formatFileSize(long fileSize) {
-    return StringUtilRt.formatFileSize(fileSize);
+  public static @NotNull String formatFileSize(long fileSize) {
+    return Formats.formatFileSize(fileSize);
   }
 
   /** Formats given file size in metric (1 kB = 1000 B) units (example: {@code formatFileSize(1234, "") = "1.23KB"}). */
-  @NotNull
   @Contract(pure = true)
-  public static String formatFileSize(long fileSize, @NotNull String unitSeparator) {
-    return StringUtilRt.formatFileSize(fileSize, unitSeparator);
+  public static @NotNull String formatFileSize(long fileSize, @NotNull String unitSeparator) {
+    return Formats.formatFileSize(fileSize, unitSeparator);
   }
 
-  /** Formats given duration as a sum of time units (example: {@code formatDuration(123456) = "2 m 3 s 456 ms"}). */
-  @NotNull
+  /** 
+   * Formats duration given in milliseconds as a sum of time units (example: {@code formatDuration(123456) = "2 m 3 s 456 ms"}).
+   * This method is intended to be used in non-localized contexts (primarily in log output).
+   * See com.intellij.ide.nls.NlsMessages for localized output.
+   */
   @Contract(pure = true)
-  public static String formatDuration(long duration) {
-    return formatDuration(duration, " ");
+  public static @NotNull @NonNls String formatDuration(long duration) {
+    return Formats.formatDuration(duration);
   }
 
-  private static final String[] TIME_UNITS = {"ms", "s", "m", "h", "d", "mo", "yr", "c", "ml", "ep"};
-  private static final long[] TIME_MULTIPLIERS = {1, 1000, 60, 60, 24, 30, 12, 100, 10, 10000};
-
-  /** Formats given duration as a sum of time units (example: {@code formatDuration(123456, "") = "2m 3s 456ms"}). */
-  @NotNull
+  /** 
+   * Formats {@link Duration} as a sum of time units (calls {@link #formatDuration(long)} with duration converted to milliseconds)
+   * This method is intended to be used in non-localized contexts (primarily in log output).
+   * See com.intellij.ide.nls.NlsMessages for localized output.
+   */
   @Contract(pure = true)
-  public static String formatDuration(long duration, @NotNull String unitSeparator) {
-    return formatDuration(duration, unitSeparator, Integer.MAX_VALUE);
+  public static @NotNull @NonNls String formatDuration(@NotNull Duration duration) {
+    return Formats.formatDuration(duration);
   }
 
-  @NotNull
+  /** Formats duration given in milliseconds as a sum of time units (example: {@code formatDuration(123456, "") = "2m 3s 456ms"}). */
   @Contract(pure = true)
-  private static String formatDuration(long duration, @NotNull String unitSeparator, int maxFragments) {
-    TLongArrayList unitValues = new TLongArrayList();
-    TIntArrayList unitIndices = new TIntArrayList();
-
-    long count = duration;
-    int i = 1;
-    for (; i < TIME_UNITS.length && count > 0; i++) {
-      long multiplier = TIME_MULTIPLIERS[i];
-      if (count < multiplier) break;
-      long remainder = count % multiplier;
-      count /= multiplier;
-      if (remainder != 0 || unitValues.size() > 0) {
-        unitValues.insert(0, remainder);
-        unitIndices.insert(0, i - 1);
-      }
-      else {
-        remainder = Math.round(remainder * 100 / (double)multiplier);
-        count += remainder / 100;
-      }
-    }
-    unitValues.insert(0, count);
-    unitIndices.insert(0, i - 1);
-
-    if (unitValues.size() > maxFragments) {
-      int lastUnitIndex = unitIndices.get(maxFragments - 1);
-      long lastMultiplier = TIME_MULTIPLIERS[lastUnitIndex];
-      // Round up if needed
-      if (unitValues.get(maxFragments) > lastMultiplier / 2) {
-        long increment = lastMultiplier - unitValues.get(maxFragments);
-        for (int unit = lastUnitIndex - 1; unit > 0; unit--) {
-          increment *= TIME_MULTIPLIERS[unit];
-        }
-        return formatDuration(duration + increment, unitSeparator, maxFragments);
-      }
-    }
-
-    StringBuilder result = new StringBuilder();
-    for (i = 0; i < unitValues.size() && i < maxFragments; i++) {
-      if (i > 0) result.append(" ");
-      result.append(unitValues.get(i)).append(unitSeparator).append(TIME_UNITS[unitIndices.get(i)]);
-    }
-    return result.toString();
+  public static @NotNull @NonNls String formatDuration(long duration, @NotNull String unitSeparator) {
+    return Formats.formatDuration(duration, unitSeparator);
   }
 
   /**
-   * Formats given duration as a sum of time units with at most two units
-   * (example: {@code formatDuration(123456, "") = "2m 3s"}).
+   * @deprecated use com.intellij.ide.nls.NlsMessages for localized output.
    */
-  public static String formatDurationApproximate(long duration) {
-    return formatDuration(duration, " ", 2);
+  @Contract(pure = true)
+  @Deprecated
+  public static @NotNull @NonNls String formatDurationPadded(long millis, @NotNull String unitSeparator) {
+    return Formats.formatDurationPadded(millis, unitSeparator);
   }
 
   /**
-   * Appends English ordinal suffix to the given number.
+   * @deprecated use com.intellij.ide.nls.NlsMessages for localized output.
    */
-  public static String formatOrdinal(long num) {
-    return OrdinalFormat.formatEnglish(num);
+  @Contract(pure = true)
+  @Deprecated
+  public static @NotNull @NonNls String formatDurationApproximate(long duration) {
+    return Formats.formatDurationApproximate(duration);
   }
 
   /**
@@ -1660,14 +1496,9 @@ public class StringUtil extends StringUtilRt {
    * @param word english word in plural form
    * @return name in singular form or {@code null} if failed to find one.
    */
-  @Nullable
   @Contract(pure = true)
-  public static String unpluralize(@NotNull String word) {
-    String singular = Pluralizer.PLURALIZER.singular(word);
-    if (singular != null) return singular;
-    if (word.endsWith("es")) return nullize(trimEnd(word, "es", true));
-    if (word.endsWith("s")) return nullize(trimEnd(word, "s", true));
-    return null;
+  public static @Nullable String unpluralize(@NotNull String word) {
+    return Strings.unpluralize(word);
   }
 
   @Contract(pure = true)
@@ -1679,28 +1510,20 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static boolean containsAnyChar(@NotNull final String value, @NotNull final String chars) {
-    return chars.length() > value.length()
-           ? containsAnyChar(value, chars, 0, value.length())
-           : containsAnyChar(chars, value, 0, chars.length());
+  public static boolean containsAnyChar(final @NotNull String value, final @NotNull @NonNls String chars) {
+    return Strings.containsAnyChar(value, chars);
   }
 
   @Contract(pure = true)
-  public static boolean containsAnyChar(@NotNull final String value,
-                                        @NotNull final String chars,
+  public static boolean containsAnyChar(final @NotNull String value,
+                                        final @NotNull String chars,
                                         final int start, final int end) {
-    for (int i = start; i < end; i++) {
-      if (chars.indexOf(value.charAt(i)) >= 0) {
-        return true;
-      }
-    }
-
-    return false;
+    return Strings.containsAnyChar(value, chars, start, end);
   }
 
   @Contract(pure = true)
-  public static boolean containsChar(@NotNull final String value, final char ch) {
-    return value.indexOf(ch) >= 0;
+  public static boolean containsChar(final @NotNull String value, final char ch) {
+    return Strings.containsChar(value, ch);
   }
 
   /**
@@ -1708,7 +1531,7 @@ public class StringUtil extends StringUtilRt {
    */
   @Deprecated
   @Contract(value = "null -> null; !null -> !null", pure = true)
-  public static String firstLetterToUpperCase(@Nullable final String displayString) {
+  public static String firstLetterToUpperCase(final @Nullable String displayString) {
     if (displayString == null || displayString.isEmpty()) return displayString;
     char firstChar = displayString.charAt(0);
     char uppedFirstChar = toUpperCase(firstChar);
@@ -1727,9 +1550,8 @@ public class StringUtil extends StringUtilRt {
    * @param filter e.g. {@link CharFilter#NOT_WHITESPACE_FILTER}
    * @return stripped string e.g. "mystring"
    */
-  @NotNull
   @Contract(pure = true)
-  public static String strip(@NotNull final String s, @NotNull final CharFilter filter) {
+  public static @NotNull String strip(final @NotNull String s, final @NotNull CharFilter filter) {
     final StringBuilder result = new StringBuilder(s.length());
     for (int i = 0; i < s.length(); i++) {
       char ch = s.charAt(i);
@@ -1747,9 +1569,8 @@ public class StringUtil extends StringUtilRt {
    * @param filter e.g. {@link CharFilter#NOT_WHITESPACE_FILTER}
    * @return trimmed string e.g. "my string"
    */
-  @NotNull
   @Contract(pure = true)
-  public static String trim(@NotNull final String s, @NotNull final CharFilter filter) {
+  public static @NotNull String trim(final @NotNull String s, final @NotNull CharFilter filter) {
     int start = 0;
     int end = s.length();
 
@@ -1766,15 +1587,13 @@ public class StringUtil extends StringUtilRt {
     return s.substring(start, end);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> findMatches(@NotNull String s, @NotNull Pattern pattern) {
+  public static @NotNull List<String> findMatches(@NotNull String s, @NotNull Pattern pattern) {
     return findMatches(s, pattern, 1);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<String> findMatches(@NotNull String s, @NotNull Pattern pattern, int groupIndex) {
+  public static @NotNull List<String> findMatches(@NotNull String s, @NotNull Pattern pattern, int groupIndex) {
     List<String> result = new SmartList<>();
     Matcher m = pattern.matcher(s);
     while (m.find()) {
@@ -1794,7 +1613,7 @@ public class StringUtil extends StringUtilRt {
    * @return position of the first character accepted or -1 if not found
    */
   @Contract(pure = true)
-  public static int findFirst(@NotNull final CharSequence s, @NotNull CharFilter filter) {
+  public static int findFirst(final @NotNull CharSequence s, @NotNull CharFilter filter) {
     for (int i = 0; i < s.length(); i++) {
       char ch = s.charAt(i);
       if (filter.accept(ch)) {
@@ -1804,9 +1623,8 @@ public class StringUtil extends StringUtilRt {
     return -1;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String replaceSubstring(@NotNull String string, @NotNull TextRange range, @NotNull String replacement) {
+  public static @NotNull String replaceSubstring(@NotNull String string, @NotNull TextRange range, @NotNull String replacement) {
     return range.replace(string, replacement);
   }
 
@@ -1822,37 +1640,17 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static boolean startsWith(@NotNull CharSequence text, @NotNull CharSequence prefix) {
-    int l1 = text.length();
-    int l2 = prefix.length();
-    if (l1 < l2) return false;
-
-    for (int i = 0; i < l2; i++) {
-      if (text.charAt(i) != prefix.charAt(i)) return false;
-    }
-
-    return true;
+    return StringUtilRt.startsWith(text, prefix);
   }
 
   @Contract(pure = true)
   public static boolean startsWith(@NotNull CharSequence text, int startIndex, @NotNull CharSequence prefix) {
-    int tl = text.length();
-    if (startIndex < 0 || startIndex > tl) {
-      throw new IllegalArgumentException("Index is out of bounds: " + startIndex + ", length: " + tl);
-    }
-    int l1 = tl - startIndex;
-    int l2 = prefix.length();
-    if (l1 < l2) return false;
-
-    for (int i = 0; i < l2; i++) {
-      if (text.charAt(i + startIndex) != prefix.charAt(i)) return false;
-    }
-
-    return true;
+    return Strings.startsWith(text, startIndex, prefix);
   }
 
   @Contract(pure = true)
   public static boolean endsWith(@NotNull CharSequence text, @NotNull CharSequence suffix) {
-    return StringUtilRt.endsWith(text, suffix);
+    return Strings.endsWith(text, suffix);
   }
 
   @Contract(pure = true)
@@ -1867,9 +1665,8 @@ public class StringUtil extends StringUtilRt {
     return true;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String commonPrefix(@NotNull String s1, @NotNull String s2) {
+  public static @NotNull String commonPrefix(@NotNull String s1, @NotNull String s2) {
     return s1.substring(0, commonPrefixLength(s1, s2));
   }
 
@@ -1883,16 +1680,15 @@ public class StringUtil extends StringUtilRt {
     int i;
     int minLength = Math.min(s1.length(), s2.length());
     for (i = 0; i < minLength; i++) {
-      if (!charsMatch(s1.charAt(i), s2.charAt(i), ignoreCase)) {
+      if (!Strings.charsMatch(s1.charAt(i), s2.charAt(i), ignoreCase)) {
         break;
       }
     }
     return i;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String commonSuffix(@NotNull String s1, @NotNull String s2) {
+  public static @NotNull String commonSuffix(@NotNull String s1, @NotNull String s2) {
     return s1.substring(s1.length() - commonSuffixLength(s1, s2));
   }
 
@@ -1922,7 +1718,7 @@ public class StringUtil extends StringUtilRt {
    */
   @Contract(pure = true)
   public static boolean contains(@NotNull CharSequence s, int start, int end, char c) {
-    return indexOf(s, c, start, end) >= 0;
+    return Strings.contains(s, start, end, c);
   }
 
   @Contract(pure = true)
@@ -1937,64 +1733,46 @@ public class StringUtil extends StringUtilRt {
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence s, char c) {
-    return indexOf(s, c, 0, s.length());
+    return Strings.indexOf(s, c);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence s, char c, int start) {
-    return indexOf(s, c, start, s.length());
+    return Strings.indexOf(s, c, start);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence s, char c, int start, int end) {
-    end = Math.min(end, s.length());
-    for (int i = Math.max(start, 0); i < end; i++) {
-      if (s.charAt(i) == c) return i;
-    }
-    return -1;
+    return Strings.indexOf(s, c, start, end);
   }
 
   @Contract(pure = true)
   public static boolean contains(@NotNull CharSequence sequence, @NotNull CharSequence infix) {
-    return indexOf(sequence, infix) >= 0;
+    return Strings.contains(sequence, infix);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence sequence, @NotNull CharSequence infix) {
-    return indexOf(sequence, infix, 0);
+    return Strings.indexOf(sequence, infix);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence sequence, @NotNull CharSequence infix, int start) {
-    return indexOf(sequence, infix, start, sequence.length());
+    return Strings.indexOf(sequence, infix, start);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence sequence, @NotNull CharSequence infix, int start, int end) {
-    for (int i = start; i <= end - infix.length(); i++) {
-      if (startsWith(sequence, i, infix)) {
-        return i;
-      }
-    }
-    return -1;
+    return Strings.indexOf(sequence, infix, start, end);
   }
 
   @Contract(pure = true)
   public static int indexOf(@NotNull CharSequence s, char c, int start, int end, boolean caseSensitive) {
-    end = Math.min(end, s.length());
-    for (int i = Math.max(start, 0); i < end; i++) {
-      if (charsMatch(s.charAt(i), c, !caseSensitive)) return i;
-    }
-    return -1;
+    return Strings.indexOf(s, c, start, end, caseSensitive);
   }
 
-  @Contract(pure = true)
-  public static int indexOf(@NotNull char[] s, char c, int start, int end, boolean caseSensitive) {
-    end = Math.min(end, s.length);
-    for (int i = Math.max(start, 0); i < end; i++) {
-      if (charsMatch(s[i], c, !caseSensitive)) return i;
-    }
-    return -1;
+  public static int indexOf(char @NotNull [] s, char c, int start, int end, boolean caseSensitive) {
+    return Strings.indexOf(s, c, start, end, caseSensitive);
   }
 
   @Contract(pure = true)
@@ -2005,64 +1783,56 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static int indexOfAny(@NotNull final String s, @NotNull final String chars) {
-    return indexOfAny(s, chars, 0, s.length());
+  public static int indexOfAny(final @NotNull String s, final @NotNull String chars) {
+    return Strings.indexOfAny(s, chars);
   }
 
   @Contract(pure = true)
-  public static int indexOfAny(@NotNull final CharSequence s, @NotNull final String chars) {
-    return indexOfAny(s, chars, 0, s.length());
+  public static int indexOfAny(final @NotNull CharSequence s, final @NotNull String chars) {
+    return Strings.indexOfAny(s, chars);
   }
 
   @Contract(pure = true)
-  public static int indexOfAny(@NotNull final String s, @NotNull final String chars, final int start, final int end) {
-    return indexOfAny((CharSequence)s, chars, start, end);
+  public static int indexOfAny(final @NotNull String s, final @NotNull String chars, final int start, final int end) {
+    return Strings.indexOfAny(s, chars, start, end);
   }
 
   @Contract(pure = true)
-  public static int indexOfAny(@NotNull final CharSequence s, @NotNull final String chars, final int start, int end) {
-    end = Math.min(end, s.length());
-    for (int i = Math.max(start, 0); i < end; i++) {
-      if (containsChar(chars, s.charAt(i))) return i;
-    }
-    return -1;
+  public static int indexOfAny(final @NotNull CharSequence s, final @NotNull String chars, final int start, int end) {
+    return Strings.indexOfAny(s, chars, start, end);
   }
 
   @Contract(pure = true)
-  public static int lastIndexOfAny(@NotNull CharSequence s, @NotNull final String chars) {
+  public static int lastIndexOfAny(@NotNull CharSequence s, final @NotNull String chars) {
     for (int i = s.length() - 1; i >= 0; i--) {
       if (containsChar(chars, s.charAt(i))) return i;
     }
     return -1;
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String substringBefore(@NotNull String text, @NotNull String subString) {
+  public static @Nullable String substringBefore(@NotNull String text, @NotNull String subString) {
     int i = text.indexOf(subString);
     if (i == -1) return null;
     return text.substring(0, i);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String substringBeforeLast(@NotNull String text, @NotNull String subString) {
+  public static @NotNull String substringBeforeLast(@NotNull String text, @NotNull String subString) {
     int i = text.lastIndexOf(subString);
     if (i == -1) return text;
     return text.substring(0, i);
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String substringAfter(@NotNull String text, @NotNull String subString) {
+  public static @Nullable String substringAfter(@NotNull String text, @NotNull String subString) {
     int i = text.indexOf(subString);
     if (i == -1) return null;
     return text.substring(i + subString.length());
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String substringAfterLast(@NotNull String text, @NotNull String subString) {
+  public static @Nullable String substringAfterLast(@NotNull String text, @NotNull String subString) {
     int i = text.lastIndexOf(subString);
     if (i == -1) return null;
     return text.substring(i + subString.length());
@@ -2083,15 +1853,13 @@ public class StringUtil extends StringUtilRt {
     return StringUtilRt.lastIndexOf(s, c, start, end);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String first(@NotNull String text, final int maxLength, final boolean appendEllipsis) {
+  public static @NotNull String first(@NotNull String text, final int maxLength, final boolean appendEllipsis) {
     return text.length() > maxLength ? text.substring(0, maxLength) + (appendEllipsis ? "..." : "") : text;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static CharSequence first(@NotNull CharSequence text, final int length, final boolean appendEllipsis) {
+  public static @NotNull CharSequence first(@NotNull CharSequence text, final int length, final boolean appendEllipsis) {
     if (text.length() <= length) {
       return text;
     }
@@ -2101,9 +1869,8 @@ public class StringUtil extends StringUtilRt {
     return text.subSequence(0, length);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static CharSequence last(@NotNull CharSequence text, final int length, boolean prependEllipsis) {
+  public static @NotNull CharSequence last(@NotNull CharSequence text, final int length, boolean prependEllipsis) {
     if (text.length() <= length) {
       return text;
     }
@@ -2113,23 +1880,20 @@ public class StringUtil extends StringUtilRt {
     return text.subSequence(text.length() - length, text.length());
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String firstLast(@NotNull String text, int length) {
+  public static @NotNull String firstLast(@NotNull String text, int length) {
     return text.length() > length
            ? text.subSequence(0, length / 2) + ELLIPSIS + text.subSequence(text.length() - length / 2 - 1, text.length())
            : text;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeChar(@NotNull final String str, final char character) {
+  public static @NotNull String escapeChar(final @NotNull String str, final char character) {
     return escapeChars(str, character);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeChars(@NotNull final String str, final char... character) {
+  public static @NotNull String escapeChars(final @NotNull String str, final char @NotNull ... character) {
     final StringBuilder buf = new StringBuilder(str);
     for (char c : character) {
       escapeChar(buf, c);
@@ -2137,7 +1901,7 @@ public class StringUtil extends StringUtilRt {
     return buf.toString();
   }
 
-  public static void escapeChar(@NotNull final StringBuilder buf, final char character) {
+  public static void escapeChar(final @NotNull StringBuilder buf, final char character) {
     int idx = 0;
     while ((idx = indexOf(buf, character, idx)) >= 0) {
       buf.insert(idx, "\\");
@@ -2145,51 +1909,34 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeQuotes(@NotNull final String str) {
+  public static @NotNull String escapeQuotes(final @NotNull String str) {
     return escapeChar(str, '"');
   }
 
-  public static void escapeQuotes(@NotNull final StringBuilder buf) {
+  public static void escapeQuotes(final @NotNull StringBuilder buf) {
     escapeChar(buf, '"');
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeSlashes(@NotNull final String str) {
+  public static @NotNull String escapeSlashes(final @NotNull String str) {
     return escapeChar(str, '/');
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeBackSlashes(@NotNull final String str) {
+  public static @NotNull String escapeBackSlashes(final @NotNull String str) {
     return escapeChar(str, '\\');
   }
 
-  public static void escapeSlashes(@NotNull final StringBuilder buf) {
-    escapeChar(buf, '/');
-  }
-
-  @NotNull
   @Contract(pure = true)
-  public static String unescapeSlashes(@NotNull final String str) {
-    final StringBuilder buf = new StringBuilder(str.length());
-    unescapeChar(buf, str, '/');
-    return buf.toString();
-  }
-
-  @NotNull
-  @Contract(pure = true)
-  public static String unescapeBackSlashes(@NotNull final String str) {
+  public static @NotNull String unescapeBackSlashes(final @NotNull String str) {
     final StringBuilder buf = new StringBuilder(str.length());
     unescapeChar(buf, str, '\\');
     return buf.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String unescapeChar(@NotNull final String str, char unescapeChar) {
+  public static @NotNull String unescapeChar(final @NotNull String str, char unescapeChar) {
     final StringBuilder buf = new StringBuilder(str.length());
     unescapeChar(buf, str, unescapeChar);
     return buf.toString();
@@ -2211,18 +1958,17 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  public static void quote(@NotNull final StringBuilder builder) {
+  public static void quote(final @NotNull StringBuilder builder) {
     quote(builder, '\"');
   }
 
-  public static void quote(@NotNull final StringBuilder builder, final char quotingChar) {
+  public static void quote(final @NotNull StringBuilder builder, final char quotingChar) {
     builder.insert(0, quotingChar);
     builder.append(quotingChar);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String wrapWithDoubleQuote(@NotNull String str) {
+  public static @NotNull String wrapWithDoubleQuote(@NotNull String str) {
     return '\"' + str + "\"";
   }
 
@@ -2234,7 +1980,7 @@ public class StringUtil extends StringUtilRt {
    */
   @Contract(value = "null -> null; !null -> !null",pure = true)
   @Deprecated
-  public static String unescapeXml(@Nullable final String text) {
+  public static String unescapeXml(final @Nullable String text) {
     return text == null ? null : unescapeXmlEntities(text);
   }
 
@@ -2243,35 +1989,32 @@ public class StringUtil extends StringUtilRt {
    */
   @Contract(value = "null -> null; !null -> !null",pure = true)
   @Deprecated
-  public static String escapeXml(@Nullable final String text) {
+  public static String escapeXml(final @Nullable String text) {
     return text == null ? null : escapeXmlEntities(text);
   }
 
   /**
    * @return {@code text} with some standard XML entities replaced with corresponding characters, e.g. '{@code &lt;}' replaced with '<'
    */
-  @NotNull
   @Contract(pure = true)
-  public static String unescapeXmlEntities(@NotNull String text) {
+  public static @NotNull String unescapeXmlEntities(@NotNull String text) {
     return replace(text, REPLACES_REFS, REPLACES_DISP);
   }
 
   /**
    * @return {@code text} with some characters replaced with standard XML entities, e.g. '<' replaced with '{@code &lt;}'
    */
-  @NotNull
   @Contract(pure = true)
-  public static String escapeXmlEntities(@NotNull String text) {
+  public static @NotNull String escapeXmlEntities(@NotNull String text) {
     return replace(text, REPLACES_DISP, REPLACES_REFS);
   }
 
-  @NotNull
-  public static String removeHtmlTags(@NotNull String htmlString) {
+  @Contract(pure = true)
+  public static @NotNull String removeHtmlTags(@NotNull String htmlString) {
     return removeHtmlTags(htmlString, false);
   }
 
-  @NotNull
-  public static String removeHtmlTags(@NotNull String htmlString, boolean isRemoveStyleTag) {
+  public static @NotNull String removeHtmlTags(@NotNull String htmlString, boolean isRemoveStyleTag) {
     if (isEmpty(htmlString)) {
       return "";
     }
@@ -2281,36 +2024,45 @@ public class StringUtil extends StringUtilRt {
       parser.parse(new StringReader(htmlString));
     }
     catch (IOException e) {
-      LOG.error(e);
+      Logger.getInstance(StringUtil.class).error(e);
     }
     return parser.getText();
+  }
+
+  @Contract(pure = true)
+  public static @NotNull @Nls String removeEllipsisSuffix(@NotNull @Nls String s) {
+    String THREE_DOTS = "...";
+    if (s.endsWith(THREE_DOTS)) {
+      return s.substring(0, s.length() - THREE_DOTS.length());
+    }
+    if (s.endsWith(ELLIPSIS)) {
+      return s.substring(0, s.length() - ELLIPSIS.length());
+    }
+    return s;
   }
 
   private static final List<String> MN_QUOTED = Arrays.asList("&&", "__");
   private static final List<String> MN_CHARS = Arrays.asList("&", "_");
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeMnemonics(@NotNull String text) {
+  public static @NotNull String escapeMnemonics(@NotNull String text) {
     return replace(text, MN_CHARS, MN_QUOTED);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String htmlEmphasize(@NotNull String text) {
-    return "<b><code>" + escapeXmlEntities(text) + "</code></b>";
+  public static @NotNull String htmlEmphasize(@NotNull @Nls String text) {
+    return HtmlChunk.tag("code").addText(text)
+      .wrapWith("b").toString();
   }
 
 
-  @NotNull
   @Contract(pure = true)
-  public static String escapeToRegexp(@NotNull String text) {
+  public static @NotNull String escapeToRegexp(@NotNull String text) {
     final StringBuilder result = new StringBuilder(text.length());
     return escapeToRegexp(text, result).toString();
   }
 
-  @NotNull
-  public static StringBuilder escapeToRegexp(@NotNull CharSequence text, @NotNull StringBuilder builder) {
+  public static @NotNull StringBuilder escapeToRegexp(@NotNull CharSequence text, @NotNull StringBuilder builder) {
     for (int i = 0; i < text.length(); i++) {
       final char c = text.charAt(i);
       if (c == ' ' || Character.isLetter(c) || Character.isDigit(c) || c == '_') {
@@ -2336,7 +2088,7 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static boolean isEscapedBackslash(@NotNull char[] chars, int startOffset, int backslashOffset) {
+  public static boolean isEscapedBackslash(char @NotNull [] chars, int startOffset, int backslashOffset) {
     if (chars[backslashOffset] != '\\') {
       return true;
     }
@@ -2373,15 +2125,13 @@ public class StringUtil extends StringUtilRt {
    * @deprecated Use {@link #replace(String, List, List)}
    */
   @Deprecated
-  @NotNull
   @Contract(pure = true)
-  public static String replace(@NotNull String text, @NotNull String[] from, @NotNull String[] to) {
+  public static @NotNull String replace(@NotNull String text, String @NotNull [] from, String @NotNull [] to) {
     return replace(text, Arrays.asList(from), Arrays.asList(to));
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String replace(@NotNull String text, @NotNull List<String> from, @NotNull List<String> to) {
+  public static @NotNull String replace(@NotNull String text, @NotNull List<String> from, @NotNull List<String> to) {
     assert from.size() == to.size();
     StringBuilder result = null;
     replace:
@@ -2411,9 +2161,8 @@ public class StringUtil extends StringUtilRt {
     return result == null ? text : result.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String[] filterEmptyStrings(@NotNull String[] strings) {
+  public static String @NotNull [] filterEmptyStrings(String @NotNull [] strings) {
     int emptyCount = 0;
     for (String string : strings) {
       if (string == null || string.isEmpty()) emptyCount++;
@@ -2462,26 +2211,12 @@ public class StringUtil extends StringUtilRt {
     return count;
   }
 
-  @NotNull
-  @Contract(pure = true)
-  public static String capitalsOnly(@NotNull String s) {
-    StringBuilder b = new StringBuilder();
-    for (int i = 0; i < s.length(); i++) {
-      if (Character.isUpperCase(s.charAt(i))) {
-        b.append(s.charAt(i));
-      }
-    }
-
-    return b.toString();
-  }
-
   /**
    * @param args Strings to join.
    * @return {@code null} if any of given Strings is {@code null}.
    */
-  @Nullable
   @Contract(pure = true)
-  public static String joinOrNull(@NotNull String... args) {
+  public static @Nullable String joinOrNull(String @NotNull ... args) {
     StringBuilder r = new StringBuilder();
     for (String arg : args) {
       if (arg == null) return null;
@@ -2490,9 +2225,8 @@ public class StringUtil extends StringUtilRt {
     return r.toString();
   }
 
-  @Nullable
   @Contract(pure = true)
-  public static String getPropertyName(@NotNull String methodName) {
+  public static @Nullable String getPropertyName(@NotNull String methodName) {
     if (methodName.startsWith("get")) {
       return Introspector.decapitalize(methodName.substring(3));
     }
@@ -2536,9 +2270,8 @@ public class StringUtil extends StringUtilRt {
    * @param isKey if true, the rules for key escaping are applied. The leading space is escaped in that case.
    * @return an escaped string
    */
-  @NotNull
   @Contract(pure = true)
-  public static String escapeProperty(@NotNull String input, final boolean isKey) {
+  public static @NotNull String escapeProperty(@NotNull String input, final boolean isKey) {
     final StringBuilder escaped = new StringBuilder(input.length());
     for (int i = 0; i < input.length(); i++) {
       final char ch = input.charAt(i);
@@ -2587,9 +2320,8 @@ public class StringUtil extends StringUtilRt {
     return escaped.toString();
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getQualifiedName(@Nullable String packageName, @NotNull String className) {
+  public static @NotNull @NlsSafe String getQualifiedName(@Nullable @NonNls String packageName, @NotNull @NonNls String className) {
     if (packageName == null || packageName.isEmpty()) {
       return className;
     }
@@ -2620,7 +2352,7 @@ public class StringUtil extends StringUtilRt {
 
       int cmp;
       if (p1.matches("\\d+") && p2.matches("\\d+")) {
-        cmp = new Integer(p1).compareTo(new Integer(p2));
+        cmp = Integer.valueOf(p1).compareTo(Integer.valueOf(p2));
       }
       else {
         cmp = part1[idx].compareTo(part2[idx]);
@@ -2636,7 +2368,7 @@ public class StringUtil extends StringUtilRt {
         String p = parts[idx];
         int cmp;
         if (p.matches("\\d+")) {
-          cmp = new Integer(p).compareTo(0);
+          cmp = Integer.valueOf(p).compareTo(0);
         }
         else {
           cmp = 1;
@@ -2682,25 +2414,7 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static int getIgnoreCaseOccurrenceCount(@NotNull String text, @NotNull String s) {
-    int res = 0;
-    int i = 0;
-    while (i < text.length()) {
-      i = indexOfIgnoreCase(text, s, i);
-      if (i >= 0) {
-        res++;
-        i++;
-      }
-      else {
-        break;
-      }
-    }
-    return res;
-  }
-
-  @NotNull
-  @Contract(pure = true)
-  public static String fixVariableNameDerivedFromPropertyName(@NotNull String name) {
+  public static @NotNull String fixVariableNameDerivedFromPropertyName(@NotNull String name) {
     if (isEmptyOrSpaces(name)) return name;
     char c = name.charAt(0);
     if (isVowel(c)) {
@@ -2709,9 +2423,8 @@ public class StringUtil extends StringUtilRt {
     return "a" + Character.toUpperCase(c) + name.substring(1);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String sanitizeJavaIdentifier(@NotNull String name) {
+  public static @NotNull String sanitizeJavaIdentifier(@NotNull String name) {
     final StringBuilder result = new StringBuilder(name.length());
 
     for (int i = 0; i < name.length(); i++) {
@@ -2756,9 +2469,8 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String tail(@NotNull String s, final int idx) {
+  public static @NotNull String tail(@NotNull String s, final int idx) {
     return idx >= s.length() ? "" : s.substring(idx);
   }
 
@@ -2768,9 +2480,8 @@ public class StringUtil extends StringUtilRt {
    * @param string String to split
    * @return array of strings
    */
-  @NotNull
   @Contract(pure = true)
-  public static String[] splitByLines(@NotNull String string) {
+  public static String @NotNull [] splitByLines(@NotNull String string) {
     return splitByLines(string, true);
   }
 
@@ -2781,15 +2492,13 @@ public class StringUtil extends StringUtilRt {
    * @param string String to split
    * @return array of strings
    */
-  @NotNull
   @Contract(pure = true)
-  public static String[] splitByLines(@NotNull String string, boolean excludeEmptyStrings) {
+  public static String @NotNull [] splitByLines(@NotNull String string, boolean excludeEmptyStrings) {
     return (excludeEmptyStrings ? EOL_SPLIT_PATTERN : EOL_SPLIT_PATTERN_WITH_EMPTY).split(string);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String[] splitByLinesDontTrim(@NotNull String string) {
+  public static String @NotNull [] splitByLinesDontTrim(@NotNull String string) {
     return EOL_SPLIT_DONT_TRIM_PATTERN.split(string);
   }
 
@@ -2807,15 +2516,13 @@ public class StringUtil extends StringUtilRt {
    * will return the following array: foo\r\n, \n, bar\n, \r\n, baz\r, \r
    *
    */
-  @NotNull
   @Contract(pure = true)
-  public static String[] splitByLinesKeepSeparators(@NotNull String string) {
+  public static String @NotNull [] splitByLinesKeepSeparators(@NotNull String string) {
     return EOL_SPLIT_KEEP_SEPARATORS.split(string);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static List<Pair<String, Integer>> getWordsWithOffset(@NotNull String s) {
+  public static @NotNull List<Pair<String, Integer>> getWordsWithOffset(@NotNull String s) {
     List<Pair<String, Integer>> res = new ArrayList<>();
     s += " ";
     StringBuilder name = new StringBuilder();
@@ -2880,7 +2587,7 @@ public class StringUtil extends StringUtilRt {
     int length2 = s2.length();
     int i = 0;
     for (; i < length1 && i < length2; i++) {
-      int diff = compare(s1.charAt(i), s2.charAt(i), ignoreCase);
+      int diff = Strings.compare(s1.charAt(i), s2.charAt(i), ignoreCase);
       if (diff != 0) {
         return diff;
       }
@@ -2990,7 +2697,7 @@ public class StringUtil extends StringUtilRt {
    * Collapses all white-space (including new lines) between non-white-space characters to a single space character.
    * Leading and trailing white space is removed.
    */
-  public static String collapseWhiteSpace(@NotNull CharSequence s) {
+  public static @NotNull String collapseWhiteSpace(@NotNull CharSequence s) {
     final StringBuilder result = new StringBuilder();
     boolean space = false;
     for (int i = 0, length = s.length(); i < length; i++) {
@@ -3008,7 +2715,7 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static boolean findIgnoreCase(@Nullable String toFind, @NotNull String... where) {
+  public static boolean findIgnoreCase(@Nullable String toFind, String @NotNull ... where) {
     for (String string : where) {
       if (equalsIgnoreCase(toFind, string)) return true;
     }
@@ -3040,13 +2747,7 @@ public class StringUtil extends StringUtilRt {
   }
 
   @Contract(pure = true)
-  public static boolean charsMatch(char c1, char c2, boolean ignoreCase) {
-    return compare(c1, c2, ignoreCase) == 0;
-  }
-
-  @NotNull
-  @Contract(pure = true)
-  public static String formatLinks(@NotNull String message) {
+  public static @NotNull String formatLinks(@NotNull String message) {
     Pattern linkPattern = Pattern.compile("http://[a-zA-Z0-9./\\-+]+");
     StringBuffer result = new StringBuffer();
     Matcher m = linkPattern.matcher(message);
@@ -3067,28 +2768,25 @@ public class StringUtil extends StringUtilRt {
     return '0' <= c && c <= '7';
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String shortenTextWithEllipsis(@NotNull final String text, final int maxLength, final int suffixLength) {
+  public static @NotNull String shortenTextWithEllipsis(final @NotNull String text, final int maxLength, final int suffixLength) {
     return shortenTextWithEllipsis(text, maxLength, suffixLength, false);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String trimMiddle(@NotNull String text, int maxLength) {
+  public static @NotNull String trimMiddle(@NotNull String text, int maxLength) {
     return shortenTextWithEllipsis(text, maxLength, maxLength >> 1, true);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String shortenTextWithEllipsis(@NotNull final String text,
-                                               final int maxLength,
-                                               final int suffixLength,
-                                               @NotNull String symbol) {
+  public static @NotNull String shortenTextWithEllipsis(final @NotNull String text,
+                                                        final int maxLength,
+                                                        final int suffixLength,
+                                                        @NotNull String symbol) {
     final int textLength = text.length();
     if (textLength > maxLength) {
       final int prefixLength = maxLength - suffixLength - symbol.length();
-      assert prefixLength > 0;
+      assert prefixLength >= 0;
       return text.substring(0, prefixLength) + symbol + text.substring(textLength - suffixLength);
     }
     else {
@@ -3096,46 +2794,43 @@ public class StringUtil extends StringUtilRt {
     }
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String shortenTextWithEllipsis(@NotNull final String text,
-                                               final int maxLength,
-                                               final int suffixLength,
-                                               boolean useEllipsisSymbol) {
+  public static @NotNull String shortenTextWithEllipsis(final @NotNull String text,
+                                                        final int maxLength,
+                                                        final int suffixLength,
+                                                        boolean useEllipsisSymbol) {
     String symbol = useEllipsisSymbol ? ELLIPSIS : "...";
     return shortenTextWithEllipsis(text, maxLength, suffixLength, symbol);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String shortenPathWithEllipsis(@NotNull final String path, final int maxLength, boolean useEllipsisSymbol) {
+  public static @NotNull String shortenPathWithEllipsis(final @NotNull String path, final int maxLength, boolean useEllipsisSymbol) {
     return shortenTextWithEllipsis(path, maxLength, (int)(maxLength * 0.7), useEllipsisSymbol);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String shortenPathWithEllipsis(@NotNull final String path, final int maxLength) {
+  public static @NotNull String shortenPathWithEllipsis(final @NotNull String path, final int maxLength) {
     return shortenPathWithEllipsis(path, maxLength, false);
   }
 
   @Contract(pure = true)
   public static boolean charsEqualIgnoreCase(char a, char b) {
-    return charsMatch(a, b, true);
+    return Strings.charsEqualIgnoreCase(a, b);
   }
 
   @Contract(pure = true)
   public static char toUpperCase(char a) {
-    return StringUtilRt.toUpperCase(a);
+    return Strings.toUpperCase(a);
   }
 
   @Contract(value = "null -> null; !null -> !null", pure = true)
   public static String toUpperCase(String s) {
-    return s == null ? null : s.toUpperCase(Locale.ENGLISH);
+    return Strings.toUpperCase(s);
   }
 
   @Contract(pure = true)
   public static char toLowerCase(final char a) {
-    return StringUtilRt.toLowerCase(a);
+    return Strings.toLowerCase(a);
   }
 
   @Contract(pure = true)
@@ -3146,8 +2841,7 @@ public class StringUtil extends StringUtilRt {
     return true;
   }
 
-  @Nullable
-  public static LineSeparator detectSeparators(@NotNull CharSequence text) {
+  public static @Nullable LineSeparator detectSeparators(@NotNull CharSequence text) {
     int index = indexOfAny(text, "\n\r");
     if (index == -1) return null;
     LineSeparator lineSeparator = getLineSeparatorAt(text, index);
@@ -3157,8 +2851,7 @@ public class StringUtil extends StringUtilRt {
     return lineSeparator;
   }
 
-  @Nullable
-  public static LineSeparator getLineSeparatorAt(@NotNull CharSequence text, int index) {
+  public static @Nullable LineSeparator getLineSeparatorAt(@NotNull CharSequence text, int index) {
     if (index < 0 || index >= text.length()) {
       return null;
     }
@@ -3169,26 +2862,22 @@ public class StringUtil extends StringUtilRt {
     return ch == '\n' ? LineSeparator.LF : null;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String convertLineSeparators(@NotNull String text) {
+  public static @NotNull String convertLineSeparators(@NotNull String text) {
     return StringUtilRt.convertLineSeparators(text);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String convertLineSeparators(@NotNull String text, boolean keepCarriageReturn) {
+  public static @NotNull String convertLineSeparators(@NotNull String text, boolean keepCarriageReturn) {
     return StringUtilRt.convertLineSeparators(text, keepCarriageReturn);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String convertLineSeparators(@NotNull String text, @NotNull String newSeparator) {
+  public static @NotNull String convertLineSeparators(@NotNull String text, @NotNull String newSeparator) {
     return StringUtilRt.convertLineSeparators(text, newSeparator);
   }
 
-  @NotNull
-  public static String convertLineSeparators(@NotNull String text, @NotNull String newSeparator, @Nullable int[] offsetsToKeep) {
+  public static @NotNull String convertLineSeparators(@NotNull String text, @NotNull String newSeparator, int @Nullable [] offsetsToKeep) {
     return StringUtilRt.convertLineSeparators(text, newSeparator, offsetsToKeep);
   }
 
@@ -3212,21 +2901,18 @@ public class StringUtil extends StringUtilRt {
     return StringUtilRt.parseEnum(string, defaultValue, clazz);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getShortName(@NotNull Class aClass) {
+  public static @NotNull @NlsSafe String getShortName(@NotNull Class<?> aClass) {
     return StringUtilRt.getShortName(aClass);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getShortName(@NotNull String fqName) {
+  public static @NotNull @NlsSafe String getShortName(@NotNull @NonNls String fqName) {
     return StringUtilRt.getShortName(fqName);
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static String getShortName(@NotNull String fqName, char separator) {
+  public static @NotNull @NlsSafe String getShortName(@NotNull @NonNls String fqName, char separator) {
     return StringUtilRt.getShortName(fqName, separator);
   }
 
@@ -3263,9 +2949,8 @@ public class StringUtil extends StringUtilRt {
            trimStart(s, className) : s;
   }
 
-  @NotNull
   @Contract(pure = true)
-  public static CharSequence newBombedCharSequence(@NotNull CharSequence sequence, long delay) {
+  public static @NotNull CharSequence newBombedCharSequence(@NotNull CharSequence sequence, long delay) {
     final long myTime = System.currentTimeMillis() + delay;
     return new BombedCharSequence(sequence) {
       @Override
@@ -3300,7 +2985,7 @@ public class StringUtil extends StringUtilRt {
    * @param s  the string to test.
    * @return   true if the string has an uppercase character, false if not.
    */
-  public static boolean hasUpperCaseChar(String s) {
+  public static boolean hasUpperCaseChar(@NotNull String s) {
       char[] chars = s.toCharArray();
       for (char c : chars) {
           if (Character.isUpperCase(c)) {
@@ -3315,7 +3000,7 @@ public class StringUtil extends StringUtilRt {
    * @param s  the string to test.
    * @return   true if the string has a lowercase character, false if not.
    */
-  public static boolean hasLowerCaseChar(String s) {
+  public static boolean hasLowerCaseChar(@NotNull String s) {
       char[] chars = s.toCharArray();
       for (char c : chars) {
           if (Character.isLowerCase(c)) {
@@ -3384,35 +3069,34 @@ public class StringUtil extends StringUtilRt {
        myDefused = true;
     }
 
-    @NotNull
     @Override
-    public String toString() {
+    public @NotNull String toString() {
       check();
       return delegate.toString();
     }
 
     protected abstract void checkCanceled();
 
-    @NotNull
     @Override
-    public CharSequence subSequence(int i, int i1) {
+    public @NotNull CharSequence subSequence(int i, int i1) {
       check();
       return delegate.subSequence(i, i1);
     }
   }
 
   @Contract(pure = true)
-  @NotNull
-  public static String toHexString(@NotNull byte[] bytes) {
-    @SuppressWarnings("SpellCheckingInspection") String digits = "0123456789abcdef";
+  public static @NotNull String toHexString(byte @NotNull [] bytes) {
+    @SuppressWarnings("SpellCheckingInspection")
+    String digits = "0123456789abcdef";
     StringBuilder sb = new StringBuilder(2 * bytes.length);
-    for (byte b : bytes) sb.append(digits.charAt((b >> 4) & 0xf)).append(digits.charAt(b & 0xf));
+    for (byte b : bytes) {
+      sb.append(digits.charAt((b >> 4) & 0xf)).append(digits.charAt(b & 0xf));
+    }
     return sb.toString();
   }
 
   @Contract(pure = true)
-  @NotNull
-  public static byte[] parseHexString(@NotNull String str) {
+  public static byte @NotNull [] parseHexString(@NotNull String str) {
     int len = str.length();
     if (len % 2 != 0) throw new IllegalArgumentException("Non-even-length: " + str);
     byte[] bytes = new byte[len / 2];
